更新熊家日本慶生行行程文件，將住宿更改為ESLEAD HOTEL Osaka Shinsaibashi，並調整相關交通路線、步行時間及餐廳安排以符合新住宿位置。新增行程備份文件以保留舊版資料。

--- a/202512/熊家日本慶生行/BACKUP/行程-12-14.md
+++ b/202512/熊家日本慶生行/BACKUP/行程-12-14.md
@@ -1,16 +1,25 @@
 ### 熊家日本慶生行（2025/12/14–12/19）
 
-- 住宿：ESLEAD HOTEL Osaka Shinsaibashi（大阪心齋橋店）- 大阪心斎橋 〒542-0082 大阪府大阪市中央区島之内1丁目21-8（1 Chome-21-8 Shimbashi, Chuo Ward, Osaka, 542-0082, Japan）
-  - **最近車站：** 大阪地鐵堺筋線「長堀橋站」（長堀橋駅，ながほりばしえき / Sakaisuji Line）
-  - **出口：** 6號出口
-  - **步行時間：** 約2分鐘
-  - **Google Maps：** [ESLEAD HOTEL Osaka Shinsaibashi](https://www.google.com/maps/search/ESLEAD+HOTEL+Osaka+Shinsaibashi)
+- 住宿：Fuji Heights Hotel（Room 15, 1-10, Fujihights, Nipponbashi, Chuo Ward, Japan KIT H4 542-0073）
+- 旅伴：3 位大人＋1 位 12 歲小孩（等同成人票）
+- 規劃原則：以日本橋飯店為中心「輻射式」動線；當日單點深玩、步行半徑內串景再回飯店；以電車為主，Uber 僅備用
+- 匯率換算：1 日圓 ≈ NT$ 0.2013（參考 [Google Finance JPY/TWD](https://www.google.com/finance/quote/JPY-TWD)）
+
+參考來源：
+- 你的規劃草稿（[Google 文件](https://docs.google.com/document/d/1So7HG9yaLzYAFrnyTJSWEKncLjS8cSy-HL0NWzu3KIs/edit?usp=sharing)）
+- USJ 票券與快速通關（[Tickets](https://www.usj.co.jp/web/en/us/tickets)｜[Express Pass](https://www.usj.co.jp/web/en/us/tickets/express)）
+- USJ 官方購票站（[USJ Web Ticket Store](https://www.usjticketing.com/)）
+- USJ 景點/餐廳（[Attractions](https://www.usj.co.jp/web/en/us/park-guide/attractions)｜[Restaurants](https://www.usj.co.jp/web/en/us/restaurants)｜[Numbered Ticket](https://www.usj.co.jp/web/en/us/enjoy/numbered-ticket)）
+- 南海電鐵 Rapi:t（[About Rapi:t](https://www.howto-osaka.com/en/rapit/)）
+- JR 西日本 ICOCA（[ICOCA](https://www.jr-odekake.net/icoca/)）
+- 大阪高島屋（[官網](https://www.takashimaya.co.jp/osaka/)）、大丸心齋橋（[官網](https://www.daimaru.co.jp/shinsaibashi/)）
+- ICOCA ([機場購票路線](https://wind.suzukihiro.tw/icoca/)) & 退票（[如何退票](https://lazyjapan.com/regions/kansai/transport/ic/)）
 
 
-### 行程總覽（ESLEAD HOTEL Osaka Shinsaibashi / 長堀橋站為中心的輻射動線）
-- 12/14（日）抵達日：KIX->難波（南海 Rapi:t/空港急行）->長堀橋站入住；辦 ICOCA；附近覓食
+### 行程總覽（日本橋飯店為中心的輻射動線）
+- 12/14（日）抵達日：KIX->難波（南海 Rapi:t/空港急行）->日本橋入住；辦 ICOCA；附近覓食
 
-### 12/14（日）抵達日：KIX -> 難波（南海 Rapi:t）-> 長堀橋站入住
+### 12/14（日）抵達日：KIX -> 難波（南海 Rapi:t）-> 日本橋入住
 - **交通詳細指引（ICOCA）**
 
   - **移動 1：KIX 關西機場 -> 難波站（南海 Rapi:t）**
@@ -32,32 +41,30 @@
 
   - **移動 2：南海難波站 -> 大阪地鐵難波站（步行轉乘）**
     - **起點：** 南海難波站（南海なんば駅，なんかいなんばえき）
-    - **終點：** 大阪地鐵難波站（大阪メトロなんば駅，おおさかめとろなんばえき）
+    - **終點：** 大阪地鐵難波站（大阪メトロなんば駅，おおさかめとろなんばえき / 千日前線）
     - **步行路線：** 從南海難波站下車後，按照車站內指示標誌前往大阪地鐵難波站
     - **步行時間：** 約 6 分鐘
     - **地標指引：**
       1. 從南海難波站下車後，尋找「大阪地鐵」或「Osaka Metro」指示標誌
       2. 沿著指示牌前進，可能需要上樓或下樓
-      3. 到達大阪地鐵難波站
+      3. 到達大阪地鐵難波站（千日前線月台）
     - **Google Maps 步行路線連結：**
       - [南海難波站 -> 大阪地鐵難波站（步行）](https://www.google.com/maps/dir/南海なんば駅/大阪メトロなんば駅)
       - 搜尋關鍵字：「南海なんば駅」->「大阪メトロなんば駅」或「Nankai Namba Station」->「Osaka Metro Namba Station」
 
-  - **移動 3：大阪地鐵難波站 -> 長堀橋站（堺筋線）**
-    - **起點：** 大阪地鐵難波站（大阪メトロなんば駅，おおさかめとろなんばえき）
-      - 需換乘至堺筋線（さかいすじせん / Sakaisuji Line）月台
-      - 換乘指示：按照站內「堺筋線」指示牌前進（可能需要上樓或下樓）
-      - 月台：通常為往天下茶屋方向（てんがちゃや）
-      - 方向：往天下茶屋方向（終點站：天下茶屋駅，てんがちゃやえき）
-    - **終點：** 長堀橋站（長堀橋駅，ながほりばしえき / 堺筋線）
-      - 車程時間：約 2 分鐘（僅 1 站）
+  - **移動 3：大阪地鐵難波站 -> 日本橋站（千日前線）**
+    - **起點：** 大阪地鐵難波站（大阪メトロなんば駅，おおさかめとろなんばえき / 千日前線，せんにちまえせん）
+      - 月台：通常為 1 號月台（往南巽方向，みなみたつみ）
+      - 方向：往南巽方向（終點站：南巽駅，みなみたつみえき）
+    - **終點：** 日本橋站（日本橋駅，にっぽんばしえき / 千日前線）
+      - 車程時間：約 1 分鐘（僅 1 站）
       - 票價：成人 ￥190 (NT$ 38)
     - **出口指引：**
-      - 從長堀橋站 6 號出口出站後，步行至 ESLEAD HOTEL Osaka Shinsaibashi（約 2 分鐘）
+      - 從日本橋站出站後，步行至 Fuji Heights Hotel（約 3–5 分鐘）
       - 建議使用 Google Maps 導航至飯店地址
     - **Google Maps 路線連結：**
-      - [難波站 -> 長堀橋站（堺筋線）](https://www.google.com/maps/dir/大阪メトロなんば駅/長堀橋駅)
-      - 搜尋關鍵字：「大阪メトロなんば駅」->「長堀橋駅」或「Osaka Metro Namba Station」->「Nagahoribashi Station」
+      - [難波站 -> 日本橋站（千日前線）](https://www.google.com/maps/dir/大阪メトロなんば駅/日本橋駅)
+      - 搜尋關鍵字：「大阪メトロなんば駅」->「日本橋駅」或「Osaka Metro Namba Station」->「Nippombashi Station」
 
 - **ICOCA 辦理**
   - 可在關西機場 2 樓的 JR 或南海電鐵售票處購買 ICOCA
