--- a/202512/熊家日本慶生行/BACKUP/行程-12-17.md
+++ b/202512/熊家日本慶生行/BACKUP/行程-12-17.md
@@ -1,12 +1,8 @@
 ### 熊家日本慶生行（2025/12/14–12/19）
 
-- 住宿：ESLEAD HOTEL Osaka Shinsaibashi（大阪心齋橋店）- 大阪心斎橋 〒542-0082 大阪府大阪市中央区島之内1丁目21-8（1 Chome-21-8 Shimbashi, Chuo Ward, Osaka, 542-0082, Japan）
-  - **最近車站：** 大阪地鐵堺筋線「長堀橋站」（長堀橋駅，ながほりばしえき / Sakaisuji Line）
-  - **出口：** 6號出口
-  - **步行時間：** 約2分鐘
-  - **Google Maps：** [ESLEAD HOTEL Osaka Shinsaibashi](https://www.google.com/maps/search/ESLEAD+HOTEL+Osaka+Shinsaibashi)
+- 住宿：Fuji Heights Hotel（Room 15, 1-10, Fujihights, Nipponbashi, Chuo Ward, Japan KIT H4 542-0073）
 - 旅伴：3 位大人＋1 位 12 歲小孩（等同成人票）
-- 規劃原則：以新住宿（ESLEAD HOTEL Osaka Shinsaibashi / 長堀橋站）為中心「輻射式」動線；當日單點深玩、步行半徑內串景再回飯店；以電車為主，Uber 僅備用
+- 規劃原則：以日本橋飯店為中心「輻射式」動線；當日單點深玩、步行半徑內串景再回飯店；以電車為主，Uber 僅備用
 - 匯率換算：1 日圓 ≈ NT$ 0.2013（參考 [Google Finance JPY/TWD](https://www.google.com/finance/quote/JPY-TWD)）
 
 參考來源：
@@ -20,47 +16,35 @@
 - ICOCA ([機場購票路線](https://wind.suzukihiro.tw/icoca/)) & 退票（[如何退票](https://lazyjapan.com/regions/kansai/transport/ic/)）
 
 
-### 行程總覽（ESLEAD HOTEL Osaka Shinsaibashi / 長堀橋站為中心的輻射動線）
-- 12/17（三）USJ 無快通（07:00 到入口排隊；不走單人通道；不買 Power-Up Band）
+### 行程總覽（日本橋飯店為中心的輻射動線）
+- 12/14（日）抵達日：KIX->難波（南海 Rapi:t/空港急行）->日本橋入住；辦 ICOCA；附近覓食
 
 ### 12/17（三）USJ 無快通（07:00 到入口排隊版）
 - 去程與到場（Uber）
-  - 06:00 從 ESLEAD HOTEL Osaka Shinsaibashi 出發 -> 06:30–06:45 抵 USJ 入口排隊（Uber 直達，約 15–20 分鐘車程）
-  - 路線：Uber 叫車（ESLEAD HOTEL Osaka Shinsaibashi -> Universal Studios Japan）
+  - 06:00 從日本橋飯店出發 -> 06:30–06:45 抵 USJ 入口排隊（Uber 直達，約 15–20 分鐘車程）
+  - 路線：Uber 叫車（日本橋飯店 -> Universal Studios Japan）
   - 交通預估：單趟約 ￥3,500–￥5,500 (NT$ 705–1,108)（4 人共乘一車，總費用）
   - **Uber 下車點與排隊入口指引**
-    - **Uber 下車點位置：**
-      - 通常 Uber 會停在 USJ 入口廣場附近或 CityWalk 入口附近的允許停車區域
-      - Uber 不能直接在 USJ 正門的計程車站上下車
-      - 建議在 Uber App 中設定目的地為「日本環球影城」或「Universal Studios Japan」
-    - **排隊入口位置：** 日本環球影城正門入口（2 Chome-1-33 Sakurajima）
-    - **從下車點到排隊入口的步行路線：**
-      - **情況 A：如果 Uber 停在 CityWalk 入口附近**
-        - 步行時間：約 5–7 分鐘
-        - 路線：穿過 Universal CityWalk -> 經過拱門（Universal Studios Arch Gate）-> 看到影城地球儀 -> 到達安檢處 -> 正門入口
-        - 地標指引：
-          1. 從下車點進入 CityWalk（有商店和餐廳的區域）
-          2. 沿著主要通道直走
-          3. 看到大型拱門（Arch Gate），這是 USJ 的入口標誌
-          4. 穿過拱門後，會看到旋轉的影城地球儀（Universal Studios Globe）
-          5. 繼續往前走，到達安檢處（需要通過行李檢查和金屬探測器）
-          6. 通過安檢後，到達正門入口，開始排隊入園
-      - **情況 B：如果 Uber 直接停在 USJ 入口廣場附近**
-        - 步行時間：約 2–3 分鐘
-        - 路線：直接走向 USJ 正門入口
-        - 地標指引：
-          1. 下車後，尋找 USJ 標誌和影城地球儀
-          2. 朝著地球儀方向前進
-          3. 到達安檢處
-          4. 通過安檢後，到達正門入口
-    - **Google Maps 步行路線：**
-      - 從 CityWalk 入口到 USJ 正門：建議在 Uber 下車時，開啟 Google Maps 導航至「日本環球影城」確認路線
-      - 搜尋關鍵字：「Universal Studios Japan Main Entrance」或「日本環球影城 正門」
-    - **注意事項：**
-      - 如果 Uber 司機直接停在排隊入口附近，則無需額外步行
-      - 建議在 Uber 上車時，告知司機目的地為「USJ 正門入口」或「Universal Studios Japan Main Entrance」
-      - 如果下車點不確定，可詢問司機或查看周圍地標（尋找 USJ 標誌、地球儀）
-      - 早上 06:30–07:00 時段，可能已有排隊人潮，可跟隨人群方向前往入口
+
+**Uber 下車點位置：** 通常 Uber 會停在 USJ 入口廣場附近或 CityWalk 入口附近的允許停車區域。Uber 不能直接在 USJ 正門的計程車站上下車。建議在 Uber App 中設定目的地為「日本環球影城」或「Universal Studios Japan」。
+
+**排隊入口位置：** 日本環球影城正門入口（2 Chome-1-33 Sakurajima）
+
+**從下車點到排隊入口的步行路線：**
+
+**情況 A：如果 Uber 停在 CityWalk 入口附近**
+- 步行時間：約 5–7 分鐘
+- 路線：穿過 Universal CityWalk -> 經過拱門（Universal Studios Arch Gate）-> 看到影城地球儀 -> 到達安檢處 -> 正門入口
+- 地標指引：從下車點進入 CityWalk（有商店和餐廳的區域），沿著主要通道直走，看到大型拱門（Arch Gate，這是 USJ 的入口標誌），穿過拱門後會看到旋轉的影城地球儀（Universal Studios Globe），繼續往前走到達安檢處（需要通過行李檢查和金屬探測器），通過安檢後到達正門入口，開始排隊入園
+
+**情況 B：如果 Uber 直接停在 USJ 入口廣場附近**
+- 步行時間：約 2–3 分鐘
+- 路線：直接走向 USJ 正門入口
+- 地標指引：下車後，尋找 USJ 標誌和影城地球儀，朝著地球儀方向前進，到達安檢處，通過安檢後到達正門入口
+
+**Google Maps 步行路線：** 從 CityWalk 入口到 USJ 正門：建議在 Uber 下車時，開啟 Google Maps 導航至「日本環球影城」確認路線。搜尋關鍵字：「Universal Studios Japan Main Entrance」或「日本環球影城 正門」
+
+**注意事項：** 如果 Uber 司機直接停在排隊入口附近，則無需額外步行。建議在 Uber 上車時，告知司機目的地為「USJ 正門入口」或「Universal Studios Japan Main Entrance」。如果下車點不確定，可詢問司機或查看周圍地標（尋找 USJ 標誌、地球儀）。早上 06:30–07:00 時段，可能已有排隊人潮，可跟隨人群方向前往入口
 - 票券（成人＝12 歲）
   - 1 日票：￥9,900 (NT$ 1,993)/人；全家四人 ￥39,600 (NT$ 7,972)
   - 參考：USJ 票務（[Park Tickets](https://www.usj.co.jp/web/en/us/tickets/park-tickets)）、官方購票站日曆價（[USJ Web Ticket Store](https://www.usjticketing.com/)）
@@ -84,7 +68,7 @@
   - JAWS 或園區拍照、伴手禮採買（Jurassic Park The Ride 有落差感，怕刺激可不排）
 - 18:00–19:00 CityWalk 晚餐
   - 餐費估：成人每人 ￥1,200–￥2,000 (NT$ 242–403)
-- 19:00– 回程（Uber 叫車返回 ESLEAD HOTEL Osaka Shinsaibashi，約 15–20 分鐘車程）
+- 19:00– 回程（Uber 叫車返回日本橋飯店，約 15–20 分鐘車程）
 
 #### 無快通排隊策略
 - 先卡 SNW，Mario Kart 設「80 分」為換線門檻；>80 分就先改 Yoshi 或去拍照/商店，30–45 分後再回補
@@ -100,8 +84,9 @@
   - 點心飲料預留：￥2,000–￥3,000 (NT$ 403–605)
 - 合計（不含購物）：約 ￥61,400–￥73,600 (NT$ 12,361–14,820)
 
-#### 口袋版路線卡（USJ 當日帶著走）
-- 06:00 從 ESLEAD HOTEL Osaka Shinsaibashi 出門（Uber） -> 06:30–06:45 抵 USJ 入口排隊
+
+### 口袋版路線卡（USJ 當日帶著走）
+- 06:00 出門（Uber） -> 06:30–06:45 抵 USJ 入口排隊
 - 入園第一步：開 App 抽 SNW/HP 入場（若分流）
 - SNW：Mario Kart（≤80 分）／若 >80 分 -> 先 Yoshi，再回補 Mario Kart
 - 10:45–11:20 三根掃帚早午餐（避 11:30–13:30）
