--- a/202512/熊家日本慶生行/BACKUP/行程-12-19.md
+++ b/202512/熊家日本慶生行/BACKUP/行程-12-19.md
@@ -1,12 +1,8 @@
 ### 熊家日本慶生行（2025/12/14–12/19）
 
-- 住宿：ESLEAD HOTEL Osaka Shinsaibashi（大阪心齋橋店）- 大阪心斎橋 〒542-0082 大阪府大阪市中央区島之内1丁目21-8（1 Chome-21-8 Shimbashi, Chuo Ward, Osaka, 542-0082, Japan）
-  - **最近車站：** 大阪地鐵堺筋線「長堀橋站」（長堀橋駅，ながほりばしえき / Sakaisuji Line）
-  - **出口：** 6號出口
-  - **步行時間：** 約2分鐘
-  - **Google Maps：** [ESLEAD HOTEL Osaka Shinsaibashi](https://www.google.com/maps/search/ESLEAD+HOTEL+Osaka+Shinsaibashi)
+- 住宿：Fuji Heights Hotel（Room 15, 1-10, Fujihights, Nipponbashi, Chuo Ward, Japan KIT H4 542-0073）
 - 旅伴：3 位大人＋1 位 12 歲小孩（等同成人票）
-- 規劃原則：以新住宿（ESLEAD HOTEL Osaka Shinsaibashi / 長堀橋站）為中心「輻射式」動線；當日單點深玩、步行半徑內串景再回飯店；以電車為主，Uber 僅備用
+- 規劃原則：以日本橋飯店為中心「輻射式」動線；當日單點深玩、步行半徑內串景再回飯店；以電車為主，Uber 僅備用
 - 匯率換算：1 日圓 ≈ NT$ 0.2013（參考 [Google Finance JPY/TWD](https://www.google.com/finance/quote/JPY-TWD)）
 
 參考來源：
@@ -20,8 +16,8 @@
 - ICOCA ([機場購票路線](https://wind.suzukihiro.tw/icoca/)) & 退票（[如何退票](https://lazyjapan.com/regions/kansai/transport/ic/)）
 
 
-### 行程總覽（ESLEAD HOTEL Osaka Shinsaibashi / 長堀橋站為中心的輻射動線）
-- 12/19（五）心齋橋/難波採買->晚間出發 KIX
+### 行程總覽（日本橋飯店為中心的輻射動線）
+- 12/14（日）抵達日：KIX->難波（南海 Rapi:t/空港急行）->日本橋入住；辦 ICOCA；附近覓食
 
 ### 12/19（五）心齋橋／難波採買＋橘子街（堀江橘通）＋美國村 -> 晚間前往機場
 - 交通（全程 ICOCA）
@@ -29,19 +25,19 @@
 
 - **交通詳細指引**
 
-  - **移動 1：ESLEAD HOTEL Osaka Shinsaibashi -> 橘子街（步行或地鐵）**
-    - **起點：** ESLEAD HOTEL Osaka Shinsaibashi（長堀橋站 6 號出口，步行約 2 分鐘）
+  - **移動 1：日本橋飯店 -> 橘子街（步行或地鐵）**
+    - **起點：** Fuji Heights Hotel（日本橋，にっぽんばし）
     - **終點：** 橘子街（堀江橘通，ほりえたちばなどおり / Orange Street）
-    - **選項 A（步行）：** 從飯店步行至橘子街（約 18–22 分鐘）
-    - **選項 B（地鐵）：** 長堀橋站（長堀橋駅，ながほりばしえき / 堺筋線）-> 難波站（なんばえき / 換乘四つ橋線，よつばしせん）-> 四ツ橋站（四ツ橋駅，よつばしえき），再步行至橘子街
+    - **選項 A（步行）：** 從飯店步行至橘子街（約 20–25 分鐘）
+    - **選項 B（地鐵）：** 日本橋站（日本橋駅，にっぽんばしえき / 千日前線，せんにちまえせん）-> 難波站（なんばえき / 換乘四つ橋線，よつばしせん）-> 四ツ橋站（四ツ橋駅，よつばしえき），再步行至橘子街
       - 換乘指示：在難波站換乘四つ橋線（往住之江公園方向，すみのえこうえん）
       - 車程時間：約 3–4 分鐘（含換乘）
       - 票價：成人 ￥230 (NT$ 46)
       - 從四ツ橋站步行至橘子街：約 6–8 分鐘
     - **Google Maps 路線連結：**
-      - [ESLEAD HOTEL Osaka Shinsaibashi -> 橘子街（步行）](https://www.google.com/maps/dir/ESLEAD+HOTEL+Osaka+Shinsaibashi/堀江橘通)
-      - [長堀橋站 -> 四ツ橋站（地鐵）](https://www.google.com/maps/dir/長堀橋駅/四ツ橋駅)
-      - 搜尋關鍵字：「ESLEAD HOTEL Osaka Shinsaibashi」->「堀江橘通」或「Orange Street Osaka」
+      - [日本橋飯店 -> 橘子街（步行）](https://www.google.com/maps/dir/日本橋/堀江橘通)
+      - [日本橋站 -> 四ツ橋站（地鐵）](https://www.google.com/maps/dir/日本橋駅/四ツ橋駅)
+      - 搜尋關鍵字：「堀江橘通」或「Orange Street Osaka」
 
   - **移動 2：橘子街 -> 美國村（步行）**
     - **起點：** 橘子街（堀江橘通，ほりえたちばなどおり）
@@ -85,27 +81,27 @@
       - [難波站 -> 心齋橋站（御堂筋線）](https://www.google.com/maps/dir/なんば駅/心齋橋駅)
       - 搜尋關鍵字：「心齋橋パルコ」或「Shinsaibashi PARCO」
 
-  - **移動 6：心齋橋/難波 -> ESLEAD HOTEL Osaka Shinsaibashi（取行李）**
+  - **移動 6：心齋橋/難波 -> 日本橋飯店（取行李）**
     - **起點：** 心齋橋（心齋橋，しんさいばし）或難波（なんば）
-    - **終點：** ESLEAD HOTEL Osaka Shinsaibashi（長堀橋站 6 號出口，步行約 2 分鐘）
-    - **選項 A（地鐵）：** 難波站（なんばえき / 堺筋線，さかいすじせん）-> 長堀橋站（長堀橋駅，ながほりばしえき）
-      - 車程時間：約 2 分鐘（僅 1 站）
+    - **終點：** Fuji Heights Hotel（日本橋，にっぽんばし）
+    - **選項 A（地鐵）：** 難波站（なんばえき / 千日前線，せんにちまえせん）-> 日本橋站（日本橋駅，にっぽんばしえき）
+      - 車程時間：約 1 分鐘（僅 1 站）
       - 票價：成人 ￥190 (NT$ 38)
-    - **選項 B（步行）：** 從難波/道頓堀步行回 ESLEAD HOTEL Osaka Shinsaibashi（約 10–15 分鐘）
+    - **選項 B（步行）：** 從難波/道頓堀步行回日本橋飯店（約 12–18 分鐘）
     - **Google Maps 路線連結：**
-      - [難波站 -> 長堀橋站（堺筋線）](https://www.google.com/maps/dir/なんば駅/長堀橋駅)
-      - 搜尋關鍵字：「なんば駅」->「長堀橋駅」或「Namba Station」->「Nagahoribashi Station」
+      - [難波站 -> 日本橋站（千日前線）](https://www.google.com/maps/dir/なんば駅/日本橋駅)
+      - 搜尋關鍵字：「なんば駅」->「日本橋駅」或「Namba Station」->「Nippombashi Station」
 
-  - **移動 7：長堀橋站 -> 南海難波站（步行轉乘）**
-    - **起點：** 長堀橋站（長堀橋駅，ながほりばしえき）或 ESLEAD HOTEL Osaka Shinsaibashi
+  - **移動 7：日本橋站 -> 南海難波站（步行轉乘）**
+    - **起點：** 日本橋站（日本橋駅，にっぽんばしえき）或 Fuji Heights Hotel
     - **終點：** 南海難波站（南海なんば駅，なんかいなんばえき）
-    - **步行路線：** 從長堀橋站步行至南海難波站（或從飯店直接步行至南海難波站）
-    - **步行時間：** 約 8–12 分鐘
+    - **步行路線：** 從日本橋站步行至南海難波站（或從飯店直接步行至南海難波站）
+    - **步行時間：** 約 5–10 分鐘
     - **地標指引：** 按照「南海電鐵（なんかいでんてつ）」或「Nankai」指示牌前進
     - **注意事項：** 南海難波站與大阪地鐵難波站不同，需確認正確車站
     - **Google Maps 步行路線連結：**
-      - [長堀橋站 -> 南海難波站（步行）](https://www.google.com/maps/dir/長堀橋駅/南海なんば駅)
-      - 搜尋關鍵字：「長堀橋駅」->「南海なんば駅」或「Nagahoribashi Station」->「Nankai Namba Station」
+      - [日本橋站 -> 南海難波站（步行）](https://www.google.com/maps/dir/日本橋駅/南海なんば駅)
+      - 搜尋關鍵字：「日本橋駅」->「南海なんば駅」或「Nippombashi Station」->「Nankai Namba Station」
 
   - **移動 8：南海難波站 -> KIX 關西機場（南海 Rapi:t）**
     - **起點：** 南海難波站（南海なんば駅，なんかいなんばえき）
@@ -132,7 +128,7 @@
   - 13:45–15:15 心齋橋筋商店街 -> 戎橋筋 -> 道頓堀
   - 15:30–16:30 難波Walk（地下街採買）
   - 16:45–17:45 PARCO（補貨/逛特定專櫃）
-  - 18:00–19:00 晚餐（見下「晚餐推薦」；挑靠近「南海難波」或「長堀橋」）
+  - 18:00–19:00 晚餐（見下「晚餐推薦」；挑靠近「南海難波」或「日本橋」）
   - 19:00–19:30 取回行李（若中午寄放）
   - 20:00–20:30 「南海難波」搭 Rapi:t 前往 KIX（快線，對號座）
     - 票價參考：合計約 ￥1,450 (NT$ 292)/人（基本車資＋指定席加價）
@@ -155,7 +151,7 @@
 
 - 甜點/咖啡（彈性穿插，美國村或 PARCO 內）
   - 建議：抹茶拿鐵／水果塔／冰淇淋
-  - 價位：甜點 ￥600–￥1,000 (NT$ 121–￥201)、飲品 ￥450–￥700 (NT$ 91–￥141)
+  - 價位：甜點 ￥600–￥1,000 (NT$ 121–201)、飲品 ￥450–￥700 (NT$ 91–141)
 
 - 晚餐推薦（18:00 入座，移動最省）
   - ぎゅうかつ もと村（Gyukatsu Motomura）心齋橋/難波
@@ -169,9 +165,9 @@
     - 價位：豬肉包 2 入約 ￥420 (NT$ 85)、燒賣 6 入約 ￥420–￥600 (NT$ 85–121)
 
 - 動線提醒
-  - 長堀橋（飯店）-> 橘子街：步行 18–22 分，或「長堀橋->（堺筋線）難波->（四つ橋線）四ツ橋」步行 6–8 分到橘子街
+  - 日本橋（飯店）-> 橘子街：步行 20–25 分，或「日本橋->（千日前線）難波->（四つ橋線）四ツ橋」步行 6–8 分到橘子街
   - 美國村->心齋橋/道頓堀：皆步行 5–15 分圈
-  - 晚餐後->南海難波：步行 8–12 分；或搭堺筋線 1 站「長堀橋<->難波」取行李再走到南海難波
+  - 晚餐後->南海難波：步行 10–15 分；或搭千日前線 1 站「日本橋<->難波」取行李再走到南海難波
 
 
 ### 補充
