--- a/202512/熊家日本慶生行/熊家日本慶生行.md
+++ b/202512/熊家日本慶生行/熊家日本慶生行.md
@@ -1,8 +1,12 @@
 ### 熊家日本慶生行（2025/12/14–12/19）
 
-- 住宿：Fuji Heights Hotel（Room 15, 1-10, Fujihights, Nipponbashi, Chuo Ward, Japan KIT H4 542-0073）
+- 住宿：ESLEAD HOTEL Osaka Shinsaibashi（大阪心齋橋店）- 大阪心斎橋 〒542-0082 大阪府大阪市中央区島之内1丁目21-8（1 Chome-21-8 Shimbashi, Chuo Ward, Osaka, 542-0082, Japan）
+  - **最近車站：** 大阪地鐵堺筋線「長堀橋站」（長堀橋駅，ながほりばしえき / Sakaisuji Line）
+  - **出口：** 6號出口
+  - **步行時間：** 約2分鐘
+  - **Google Maps：** [ESLEAD HOTEL Osaka Shinsaibashi](https://www.google.com/maps/search/ESLEAD+HOTEL+Osaka+Shinsaibashi)
 - 旅伴：3 位大人＋1 位 12 歲小孩（等同成人票）
-- 規劃原則：以日本橋飯店為中心「輻射式」動線；當日單點深玩、步行半徑內串景再回飯店；以電車為主，Uber 僅備用
+- 規劃原則：以新住宿（ESLEAD HOTEL Osaka Shinsaibashi / 長堀橋站）為中心「輻射式」動線；當日單點深玩、步行半徑內串景再回飯店；以電車為主，Uber 僅備用
 - 匯率換算：1 日圓 ≈ NT$ 0.2013（參考 [Google Finance JPY/TWD](https://www.google.com/finance/quote/JPY-TWD)）
 
 參考來源：
@@ -16,10 +20,10 @@
 - ICOCA ([機場購票路線](https://wind.suzukihiro.tw/icoca/)) & 退票（[如何退票](https://lazyjapan.com/regions/kansai/transport/ic/)）
 
 
-### 行程總覽（日本橋飯店為中心的輻射動線）
-- 12/14（日）抵達日：KIX->難波（南海 Rapi:t/空港急行）->日本橋入住；辦 ICOCA；附近覓食
+### 行程總覽（ESLEAD HOTEL Osaka Shinsaibashi / 長堀橋站為中心的輻射動線）
+- 12/14（日）抵達日：KIX->難波（南海 Rapi:t/空港急行）->長堀橋站入住；辦 ICOCA；附近覓食
 
-### 12/14（日）抵達日：KIX -> 難波（南海 Rapi:t）-> 日本橋入住
+### 12/14（日）抵達日：KIX -> 難波（南海 Rapi:t）-> 長堀橋站入住
 - **交通詳細指引（ICOCA）**
 
   - **移動 1：KIX 關西機場 -> 難波站（南海 Rapi:t）**
@@ -41,30 +45,32 @@
 
   - **移動 2：南海難波站 -> 大阪地鐵難波站（步行轉乘）**
     - **起點：** 南海難波站（南海なんば駅，なんかいなんばえき）
-    - **終點：** 大阪地鐵難波站（大阪メトロなんば駅，おおさかめとろなんばえき / 千日前線）
+    - **終點：** 大阪地鐵難波站（大阪メトロなんば駅，おおさかめとろなんばえき）
     - **步行路線：** 從南海難波站下車後，按照車站內指示標誌前往大阪地鐵難波站
     - **步行時間：** 約 6 分鐘
     - **地標指引：**
       1. 從南海難波站下車後，尋找「大阪地鐵」或「Osaka Metro」指示標誌
       2. 沿著指示牌前進，可能需要上樓或下樓
-      3. 到達大阪地鐵難波站（千日前線月台）
+      3. 到達大阪地鐵難波站
     - **Google Maps 步行路線連結：**
       - [南海難波站 -> 大阪地鐵難波站（步行）](https://www.google.com/maps/dir/南海なんば駅/大阪メトロなんば駅)
       - 搜尋關鍵字：「南海なんば駅」->「大阪メトロなんば駅」或「Nankai Namba Station」->「Osaka Metro Namba Station」
 
-  - **移動 3：大阪地鐵難波站 -> 日本橋站（千日前線）**
-    - **起點：** 大阪地鐵難波站（大阪メトロなんば駅，おおさかめとろなんばえき / 千日前線，せんにちまえせん）
-      - 月台：通常為 1 號月台（往南巽方向，みなみたつみ）
-      - 方向：往南巽方向（終點站：南巽駅，みなみたつみえき）
-    - **終點：** 日本橋站（日本橋駅，にっぽんばしえき / 千日前線）
-      - 車程時間：約 1 分鐘（僅 1 站）
+  - **移動 3：大阪地鐵難波站 -> 長堀橋站（堺筋線）**
+    - **起點：** 大阪地鐵難波站（大阪メトロなんば駅，おおさかめとろなんばえき）
+      - 需換乘至堺筋線（さかいすじせん / Sakaisuji Line）月台
+      - 換乘指示：按照站內「堺筋線」指示牌前進（可能需要上樓或下樓）
+      - 月台：通常為往天下茶屋方向（てんがちゃや）
+      - 方向：往天下茶屋方向（終點站：天下茶屋駅，てんがちゃやえき）
+    - **終點：** 長堀橋站（長堀橋駅，ながほりばしえき / 堺筋線）
+      - 車程時間：約 2 分鐘（僅 1 站）
       - 票價：成人 ￥190 (NT$ 38)
     - **出口指引：**
-      - 從日本橋站出站後，步行至 Fuji Heights Hotel（約 3–5 分鐘）
+      - 從長堀橋站 6 號出口出站後，步行至 ESLEAD HOTEL Osaka Shinsaibashi（約 2 分鐘）
       - 建議使用 Google Maps 導航至飯店地址
     - **Google Maps 路線連結：**
-      - [難波站 -> 日本橋站（千日前線）](https://www.google.com/maps/dir/大阪メトロなんば駅/日本橋駅)
-      - 搜尋關鍵字：「大阪メトロなんば駅」->「日本橋駅」或「Osaka Metro Namba Station」->「Nippombashi Station」
+      - [難波站 -> 長堀橋站（堺筋線）](https://www.google.com/maps/dir/大阪メトロなんば駅/長堀橋駅)
+      - 搜尋關鍵字：「大阪メトロなんば駅」->「長堀橋駅」或「Osaka Metro Namba Station」->「Nagahoribashi Station」
 
 - **ICOCA 辦理**
   - 可在關西機場 2 樓的 JR 或南海電鐵售票處購買 ICOCA
@@ -72,7 +78,7 @@
   - 參考：[ICOCA 機場購票路線](https://wind.suzukihiro.tw/icoca/)
 - 12/15（一）大阪市區：黑門市場->大阪城->梅田（阪神/阪急/LUCUA 1100/HEP FIVE）->鰻串晚餐
 - 12/16（二）大阪市區：木津市場->難波八阪神社->通天閣->HARUKAS 觀景台->四天王寺->PARCO->晚餐（やよい軒/天丼てんや）->難波Walk（20:00 前回飯店）
-- 12/17（三）USJ 無快通（07:00 到入口排隊；不走單人通道；不買 Power‑Up Band）
+- 12/17（三）USJ 無快通（07:00 到入口排隊；不走單人通道；不買 Power-Up Band）
 - 12/18（四）京都一日：和服租借・伏見稻荷・清水寺/二年坂/三年坂・祇園/花見小路/鴨川/八坂神社
 - 12/19（五）心齋橋/難波採買->晚間出發 KIX
 
@@ -85,17 +91,19 @@
 
 - **交通詳細指引**
 
-  - **移動 1：日本橋飯店 -> 黑門市場（步行）**
-    - **起點：** Fuji Heights Hotel（日本橋，にっぽんばし）
+  - **移動 1：ESLEAD HOTEL Osaka Shinsaibashi -> 黑門市場（步行或地鐵）**
+    - **起點：** ESLEAD HOTEL Osaka Shinsaibashi（長堀橋站 6 號出口，步行約 2 分鐘）
     - **終點：** 黑門市場（黒門市場，くろもんいちば）
-    - **步行路線：** 從飯店步行至黑門市場
-    - **步行時間：** 約 30 分鐘（09:30 出發 -> 10:00 抵達）
+    - **選項 A（步行）：** 從飯店步行至黑門市場（約 15–18 分鐘）
+    - **選項 B（地鐵）：** 長堀橋站（長堀橋駅，ながほりばしえき / 堺筋線）-> 日本橋站（日本橋駅，にっぽんばしえき / 換乘千日前線）-> 日本橋站（千日前線）-> 黑門市場步行
+      - 車程時間：約 3–4 分鐘（含換乘）
+      - 票價：成人 ￥190 (NT$ 38)
     - **地標指引：** 使用 Google Maps 導航至「黑門市場」
     - **Google Maps 步行路線連結：**
-      - [日本橋飯店 -> 黑門市場（步行）](https://www.google.com/maps/dir/日本橋/黒門市場)
-      - 搜尋關鍵字：「黒門市場」或「Kuromon Ichiba」
+      - [ESLEAD HOTEL Osaka Shinsaibashi -> 黑門市場（步行）](https://www.google.com/maps/dir/ESLEAD+HOTEL+Osaka+Shinsaibashi/黒門市場)
+      - 搜尋關鍵字：「ESLEAD HOTEL Osaka Shinsaibashi」->「黒門市場」或「Kuromon Ichiba」
 
-  - **移動 2：黑門市場 -> 日本橋站 -> 谷町九丁目站（千日前線）**
+  - **移動 2：黑門市場 -> 長堀橋站 -> 谷町九丁目站（換乘）**
     - **步行：** 從黑門市場（黒門市場，くろもんいちば）走回日本橋站（約 5–10 分鐘）
     - **起點：** 日本橋站（日本橋駅，にっぽんばしえき / 千日前線，せんにちまえせん）
       - 月台：通常為 1 號月台（往南巽方向，みなみたつみ）
@@ -148,19 +156,20 @@
       - [谷町四丁目站 -> 東梅田站（谷町線）](https://www.google.com/maps/dir/谷町四丁目駅/東梅田駅)
       - 搜尋關鍵字：「谷町四丁目駅」->「東梅田駅」或「Higashi-Umeda Station」
 
-  - **移動 6：東梅田站 -> 日本橋站（回程）**
-    - **建議路線：** 東梅田站（東梅田駅，ひがしうめだえき / 谷町線，たにまちせん）-> 谷町九丁目站（換乘千日前線）-> 日本橋站（日本橋駅，にっぽんばしえき）
+  - **移動 6：東梅田站 -> 長堀橋站（回程）**
+    - **建議路線：** 東梅田站（東梅田駅，ひがしうめだえき / 谷町線，たにまちせん）-> 谷町九丁目站（換乘千日前線）-> 日本橋站（換乘堺筋線）-> 長堀橋站（長堀橋駅，ながほりばしえき）
     - **換乘指示：**
-      1. 在谷町九丁目站下車
-      2. 按照「千日前線（せんにちまえせん）」指示牌換乘
-      3. 搭乘千日前線（往南巽方向，みなみたつみ）至日本橋站
-    - **車程時間：** 約 10–12 分鐘（含換乘）
+      1. 在谷町九丁目站下車，按照「千日前線（せんにちまえせん）」指示牌換乘
+      2. 搭乘千日前線（往南巽方向，みなみたつみ）至日本橋站
+      3. 在日本橋站換乘堺筋線（往天下茶屋方向，てんがちゃや）至長堀橋站
+    - **車程時間：** 約 12–15 分鐘（含換乘）
     - **票價：** 成人 ￥230 (NT$ 46)
-    - **備選路線：** 梅田站（梅田駅，うめだえき / 御堂筋線，みどうすじせん）-> 難波站（なんばえき / 步行或千日前線）-> 日本橋站
-      - 此路線較長，但可避免換乘（如不熟悉換乘可選此路線）
+    - **備選路線：** 梅田站（梅田駅，うめだえき / 御堂筋線，みどうすじせん）-> 難波站（なんばえき / 換乘堺筋線）-> 長堀橋站
+      - 此路線較長，但換乘較簡單（如不熟悉換乘可選此路線）
+    - **出口指引：** 從長堀橋站 6 號出口出站，步行約 2 分鐘至 ESLEAD HOTEL Osaka Shinsaibashi
     - **Google Maps 路線連結：**
-      - [東梅田站 -> 日本橋站（回程）](https://www.google.com/maps/dir/東梅田駅/日本橋駅)
-      - 搜尋關鍵字：「東梅田駅」->「日本橋駅」或「Higashi-Umeda Station」->「Nippombashi Station」
+      - [東梅田站 -> 長堀橋站（回程）](https://www.google.com/maps/dir/東梅田駅/長堀橋駅)
+      - 搜尋關鍵字：「東梅田駅」->「長堀橋駅」或「Higashi-Umeda Station」->「Nagahoribashi Station」
 
 - 時間軸（目標：20:00 前回到飯店）
   - 09:30 飯店出發步行 -> 10:00 抵黑門市場
@@ -187,9 +196,9 @@
   - 17:30–18:20 晚餐｜Unagi Kushiyaki Izumo（鰻串）
     - 預算（每人）：￥2,500–￥3,500 (NT$ 503–705)
     - 如為 LUCUA 內分店，動線更順；尖峰建議提早候位
-  - 18:25–19:00 回程 -> 日本橋
-    - 建議路線（其一）：東梅田（谷町線）-> 谷町九丁目（千日前線）-> 日本橋
-    - 備選：梅田（御堂筋線）-> 難波（步行或千日前線）-> 日本橋
+  - 18:25–19:00 回程 -> 長堀橋站
+    - 建議路線（其一）：東梅田（谷町線）-> 谷町九丁目（千日前線）-> 日本橋（堺筋線）-> 長堀橋
+    - 備選：梅田（御堂筋線）-> 難波（堺筋線）-> 長堀橋
   - 19:00–20:00 飯店整理/休息（達成「20:00 前回到飯店」目標）
 
 - 備註與微調守則
@@ -201,21 +210,21 @@
 ### 12/16（二）大阪市區：木津市場 -> 難波八阪神社 -> 通天閣 -> 阿倍野HARUKAS 觀景台 -> 四天王寺 -> PARCO -> やよい軒（難波）／天丼てんや（道頓堀/心齋橋） -> 難波Walk（20:00 前回飯店）
 - 交通（2 日大阪周遊卡 + ICOCA）
   - **三位大人：** 繼續使用 2 日大阪周遊卡（第 2 天），可無限次搭乘大阪 Metro、巴士等指定交通工具
-  - **12 歲小孩：** 使用 ICOCA，多以大阪 Metro＋JR 串接：日本橋<->大國町/今宮戎/恵美須町/天王寺/心齋橋/難波（單段多為 ￥230–￥290）
+  - **12 歲小孩：** 使用 ICOCA，多以大阪 Metro＋JR 串接：長堀橋<->日本橋<->大國町/今宮戎/恵美須町/天王寺/心齋橋/難波（單段多為 ￥230–￥290）
   - 動線盡量連貫，步行區段控制在 10–15 分內
 
 - **交通詳細指引**
 
-  - **移動 1：日本橋飯店 -> 木津市場（步行或地鐵）**
-    - **起點：** Fuji Heights Hotel（日本橋，にっぽんばし）
+  - **移動 1：ESLEAD HOTEL Osaka Shinsaibashi -> 木津市場（步行或地鐵）**
+    - **起點：** ESLEAD HOTEL Osaka Shinsaibashi（長堀橋站 6 號出口，步行約 2 分鐘）
     - **終點：** 木津市場（木津市場，きづいちば）
-    - **選項 A（步行）：** 從飯店步行至木津市場（約 10–12 分鐘）
-    - **選項 B（地鐵）：** 日本橋站（日本橋駅，にっぽんばしえき / 千日前線，せんにちまえせん）-> 大國町站（大國町駅，だいこくまちえき）或今宮戎站（今宮戎駅，いまみやえびすえき），再步行至木津市場
-      - 車程時間：約 2–3 分鐘
+    - **選項 A（步行）：** 從飯店步行至木津市場（約 12–15 分鐘）
+    - **選項 B（地鐵）：** 長堀橋站（長堀橋駅，ながほりばしえき / 堺筋線）-> 日本橋站（日本橋駅，にっぽんばしえき / 換乘千日前線）-> 大國町站（大國町駅，だいこくまちえき）或今宮戎站（今宮戎駅，いまみやえびすえき），再步行至木津市場
+      - 車程時間：約 4–5 分鐘（含換乘）
       - 票價：成人 ￥190 (NT$ 38)
     - **Google Maps 路線連結：**
-      - [日本橋飯店 -> 木津市場（步行）](https://www.google.com/maps/dir/日本橋/木津市場)
-      - 搜尋關鍵字：「木津市場」或「Kizu Market」
+      - [ESLEAD HOTEL Osaka Shinsaibashi -> 木津市場（步行）](https://www.google.com/maps/dir/ESLEAD+HOTEL+Osaka+Shinsaibashi/木津市場)
+      - 搜尋關鍵字：「ESLEAD HOTEL Osaka Shinsaibashi」->「木津市場」或「Kizu Market」
 
   - **移動 2：木津市場 -> 難波八阪神社（步行或地鐵）**
     - **起點：** 木津市場（木津市場，きづいちば）
@@ -274,17 +283,18 @@
       - [天王寺站 -> 心齋橋站（御堂筋線）](https://www.google.com/maps/dir/天王寺駅/心齋橋駅)
       - 搜尋關鍵字：「天王寺駅」->「心齋橋駅」或「Tennoji Station」->「Shinsaibashi Station」
 
-  - **移動 7：心齋橋 -> 難波Walk -> 日本橋站（回程）**
+  - **移動 7：心齋橋 -> 難波Walk -> 長堀橋站（回程）**
     - **起點：** 心齋橋（心齋橋，しんさいばし）
-    - **終點：** 日本橋站（日本橋駅，にっぽんばしえき）
+    - **終點：** 長堀橋站（長堀橋駅，ながほりばしえき）
     - **步行：** 從心齋橋步行至難波Walk（なんばウォーク）、道頓堀（道頓堀，どうとんぼり）（約 5–10 分鐘）
-    - **回程選項 A（地鐵）：** 難波站（なんばえき / 千日前線，せんにちまえせん）-> 日本橋站
-      - 車程時間：約 1 分鐘（僅 1 站）
+    - **回程選項 A（地鐵）：** 難波站（なんばえき / 堺筋線，さかいすじせん）-> 長堀橋站
+      - 車程時間：約 2 分鐘（僅 1 站）
       - 票價：成人 ￥190 (NT$ 38)
-    - **回程選項 B（步行）：** 從難波/道頓堀步行回日本橋飯店（約 12–18 分鐘）
+    - **回程選項 B（步行）：** 從難波/道頓堀步行回 ESLEAD HOTEL Osaka Shinsaibashi（約 10–15 分鐘）
+    - **出口指引：** 從長堀橋站 6 號出口出站，步行約 2 分鐘至飯店
     - **Google Maps 路線連結：**
-      - [心齋橋 -> 難波Walk -> 日本橋站（回程）](https://www.google.com/maps/dir/心齋橋/日本橋駅)
-      - 搜尋關鍵字：「心齋橋」->「難波」->「日本橋駅」或「Shinsaibashi」->「Namba」->「Nippombashi Station」
+      - [心齋橋 -> 難波Walk -> 長堀橋站（回程）](https://www.google.com/maps/dir/心齋橋/長堀橋駅)
+      - 搜尋關鍵字：「心齋橋」->「難波」->「長堀橋駅」或「Shinsaibashi」->「Namba」->「Nagahoribashi Station」
 
 - 時間軸（估）
   - 07:30 出門 -> 07:50 抵「木津市場」周邊（步行 10–12 分或搭至大國町/今宮戎再步行）
@@ -298,7 +308,7 @@
   - 15:45–16:45 心齋橋 PARCO（從天王寺搭御堂筋線至心齋橋）
   - 17:00–17:50 難波Walk 地下街（步行移動至道頓堀/難波）
   - 18:00–19:00 晚餐：やよい軒（難波）｜備案：天丼てんや（道頓堀/心齋橋）（見下「晚餐推薦」）
-  - 19:00–19:30 步行或 1 站地鐵回到日本橋
+  - 19:00–19:30 步行或地鐵回到長堀橋站
   - 20:00 前 抵飯店
 
 - 早餐推薦（木津市場）
@@ -339,14 +349,14 @@
   - 木津市場 -> 難波八阪神社：步行約 15–18 分，或短程地鐵至難波再步行
   - 新世界（通天閣）<->四天王寺<->天王寺：皆在 1～2 站地鐵/1～1.5km 步行圈
   - HARUKAS -> 心齋橋（PARCO）：御堂筋線直達（約 9–12 分）
-  - 晚餐後到飯店：道頓堀/難波 -> 日本橋步行約 12–18 分；搭千日前線 1 站更省力
+  - 晚餐後到飯店：道頓堀/難波 -> 長堀橋步行約 10–15 分；搭堺筋線 1 站更省力
   - 時間守門：17:50 離開難波Walk、18:00 入座晚餐、19:30 動身回飯店 -> 輕鬆在 20:00 前到
 
 
 ### 12/17（三）USJ 無快通（07:00 到入口排隊版）
 - 去程與到場（Uber）
-  - 06:00 從日本橋飯店出發 -> 06:30–06:45 抵 USJ 入口排隊（Uber 直達，約 15–20 分鐘車程）
-  - 路線：Uber 叫車（日本橋飯店 -> Universal Studios Japan）
+  - 06:00 從 ESLEAD HOTEL Osaka Shinsaibashi 出發 -> 06:30–06:45 抵 USJ 入口排隊（Uber 直達，約 15–20 分鐘車程）
+  - 路線：Uber 叫車（ESLEAD HOTEL Osaka Shinsaibashi -> Universal Studios Japan）
   - 交通預估：單趟約 ￥3,500–￥5,500 (NT$ 705–1,108)（4 人共乘一車，總費用）
   - **Uber 下車點與排隊入口指引**
     - **Uber 下車點位置：**
@@ -404,7 +414,7 @@
   - JAWS 或園區拍照、伴手禮採買（Jurassic Park The Ride 有落差感，怕刺激可不排）
 - 18:00–19:00 CityWalk 晚餐
   - 餐費估：成人每人 ￥1,200–￥2,000 (NT$ 242–403)
-- 19:00– 回程（Uber 叫車返回日本橋飯店，約 15–20 分鐘車程）
+- 19:00– 回程（Uber 叫車返回 ESLEAD HOTEL Osaka Shinsaibashi，約 15–20 分鐘車程）
 
 #### 無快通排隊策略
 - 先卡 SNW，Mario Kart 設「80 分」為換線門檻；>80 分就先改 Yoshi 或去拍照/商店，30–45 分後再回補
@@ -424,21 +434,22 @@
 ### 12/18（四）京都：和服租借 -> 伏見稻荷 -> 清水寺/二年坂/三年坂 -> 花見小路/鴨川/八坂神社 -> 祇園（20:00 前回飯店）
 - 交通（1 日京阪觀光 + ICOCA）
   - **三位大人：** 使用 1 日京阪觀光（每人 NT$ 330），可無限次搭乘京阪電鐵指定區間
-  - **12 歲小孩：** 使用 ICOCA，日本橋 ->（千日前線）難波 ->（御堂筋線）淀屋橋 ->（京阪）祇園四条／清水五条
-  - 市內移動以京阪/地下鐵＋步行；18:30 左右從祇園四条 ->（京阪/地下鐵）-> 日本橋，19:50 前抵達
+  - **12 歲小孩：** 使用 ICOCA，長堀橋 ->（堺筋線）日本橋 ->（千日前線）難波 ->（御堂筋線）淀屋橋 ->（京阪）祇園四条／清水五条
+  - 市內移動以京阪/地下鐵＋步行；18:30 左右從祇園四条 ->（京阪/地下鐵）-> 長堀橋，19:50 前抵達
 
 - **交通詳細指引**
 
-  - **移動 1：日本橋站 -> 難波站（千日前線）**
-    - **起點：** 日本橋站（日本橋駅，にっぽんばしえき / 千日前線，せんにちまえせん）
-      - 月台：通常為 1 號月台（往南巽方向，みなみたつみ）
-      - 方向：往南巽方向（終點站：南巽駅，みなみたつみえき）
-    - **終點：** 難波站（なんばえき）
-      - 車程時間：約 1 分鐘（僅 1 站）
+  - **移動 1：長堀橋站 -> 難波站（堺筋線）**
+    - **起點：** 長堀橋站（長堀橋駅，ながほりばしえき / 堺筋線，さかいすじせん）
+      - 月台：通常為往天下茶屋方向（てんがちゃや）
+      - 方向：往天下茶屋方向（終點站：天下茶屋駅，てんがちゃやえき）
+    - **終點：** 難波站（なんばえき / 堺筋線）
+      - 車程時間：約 2 分鐘（僅 1 站）
       - 票價：成人 ￥190 (NT$ 38)
+    - **換乘指示：** 在難波站換乘御堂筋線（みどうすじせん）前往淀屋橋
     - **Google Maps 路線連結：**
-      - [日本橋站 -> 難波站（千日前線）](https://www.google.com/maps/dir/日本橋駅/なんば駅)
-      - 搜尋關鍵字：「日本橋駅」->「なんば駅」或「Nippombashi Station」->「Namba Station」
+      - [長堀橋站 -> 難波站（堺筋線）](https://www.google.com/maps/dir/長堀橋駅/なんば駅)
+      - 搜尋關鍵字：「長堀橋駅」->「なんば駅」或「Nagahoribashi Station」->「Namba Station」
 
   - **移動 2：難波站 -> 淀屋橋站（御堂筋線，換乘）**
     - **換乘指示：**
@@ -507,21 +518,22 @@
       - [伏見稻荷站 -> 祇園四条站（京阪本線）](https://www.google.com/maps/dir/伏見稲荷駅/祇園四条駅)
       - 搜尋關鍵字：「伏見稲荷駅」->「祇園四条駅」或「Fushimi-Inari Station」->「Gion-Shijo Station」
 
-  - **移動 7：祇園四条站 -> 日本橋站（回程）**
-    - **路線：** 祇園四条站（祇園四条駅，ぎおんしじょうえき / 京阪本線，けいはんほんせん）-> 淀屋橋站（淀屋橋駅，よどやばしえき / 步行轉乘）-> 淀屋橋站（御堂筋線，みどうすじせん）-> 難波站（なんばえき / 換乘千日前線，せんにちまえせん）-> 日本橋站（日本橋駅，にっぽんばしえき）
+  - **移動 7：祇園四条站 -> 長堀橋站（回程）**
+    - **路線：** 祇園四条站（祇園四条駅，ぎおんしじょうえき / 京阪本線，けいはんほんせん）-> 淀屋橋站（淀屋橋駅，よどやばしえき / 步行轉乘）-> 淀屋橋站（御堂筋線，みどうすじせん）-> 難波站（なんばえき / 換乘堺筋線，さかいすじせん）-> 長堀橋站（長堀橋駅，ながほりばしえき）
     - **詳細步驟：**
       1. 從祇園四条站搭乘京阪本線（往淀屋橋方向，よどやばし）至淀屋橋站（約 50–55 分鐘）
       2. 在淀屋橋站步行轉乘至大阪地鐵淀屋橋站（約 2–3 分鐘）
       3. 搭乘御堂筋線（往難波方向，なんば）至難波站（約 5–6 分鐘）
-      4. 在難波站換乘千日前線（往南巽方向，みなみたつみ）至日本橋站（約 1 分鐘）
+      4. 在難波站換乘堺筋線（往天下茶屋方向，てんがちゃや）至長堀橋站（約 2 分鐘）
     - **總車程時間：** 約 60–65 分鐘（含換乘）
     - **總票價：** 成人約 ￥840 (NT$ 169)（京阪 ￥410 + 地鐵 ￥430）
+    - **出口指引：** 從長堀橋站 6 號出口出站，步行約 2 分鐘至 ESLEAD HOTEL Osaka Shinsaibashi
     - **注意事項：**
-      - 建議 18:30 前開始回程，以確保 19:50 前抵達日本橋
+      - 建議 18:30 前開始回程，以確保 19:50 前抵達長堀橋
       - 跨府轉乘較複雜，建議預留充足時間
     - **Google Maps 路線連結：**
-      - [祇園四条站 -> 日本橋站（回程完整路線）](https://www.google.com/maps/dir/祇園四条駅/日本橋駅)
-      - 搜尋關鍵字：「祇園四条駅」->「日本橋駅」或「Gion-Shijo Station」->「Nippombashi Station」
+      - [祇園四条站 -> 長堀橋站（回程完整路線）](https://www.google.com/maps/dir/祇園四条駅/長堀橋駅)
+      - 搜尋關鍵字：「祇園四条駅」->「長堀橋駅」或「Gion-Shijo Station」->「Nagahoribashi Station」
 
 - 節奏規劃
   - 07:30 出門 -> 08:40 抵京都（祇園四条/清水五条）
@@ -537,7 +549,7 @@
   - 16:50–17:30 甜點（見下「甜點/下午茶」）
   - 17:30–17:50 歸還和服（多數店家 18:00 截止，延長需加價）
   - 17:50–18:20 晚餐（見下「晚餐名單」；快餐型避免壓到返程）
-  - 18:30–19:50 返回日本橋（達成 20:00 前回飯店）
+  - 18:30–19:50 返回長堀橋站（達成 20:00 前回飯店）
 
 - 早餐名單（2 選 1）
   - INODA COFFEE（京都站 Porta/本店就近擇店）
@@ -574,19 +586,19 @@
 
 - **交通詳細指引**
 
-  - **移動 1：日本橋飯店 -> 橘子街（步行或地鐵）**
-    - **起點：** Fuji Heights Hotel（日本橋，にっぽんばし）
+  - **移動 1：ESLEAD HOTEL Osaka Shinsaibashi -> 橘子街（步行或地鐵）**
+    - **起點：** ESLEAD HOTEL Osaka Shinsaibashi（長堀橋站 6 號出口，步行約 2 分鐘）
     - **終點：** 橘子街（堀江橘通，ほりえたちばなどおり / Orange Street）
-    - **選項 A（步行）：** 從飯店步行至橘子街（約 20–25 分鐘）
-    - **選項 B（地鐵）：** 日本橋站（日本橋駅，にっぽんばしえき / 千日前線，せんにちまえせん）-> 難波站（なんばえき / 換乘四つ橋線，よつばしせん）-> 四ツ橋站（四ツ橋駅，よつばしえき），再步行至橘子街
+    - **選項 A（步行）：** 從飯店步行至橘子街（約 18–22 分鐘）
+    - **選項 B（地鐵）：** 長堀橋站（長堀橋駅，ながほりばしえき / 堺筋線）-> 難波站（なんばえき / 換乘四つ橋線，よつばしせん）-> 四ツ橋站（四ツ橋駅，よつばしえき），再步行至橘子街
       - 換乘指示：在難波站換乘四つ橋線（往住之江公園方向，すみのえこうえん）
       - 車程時間：約 3–4 分鐘（含換乘）
       - 票價：成人 ￥230 (NT$ 46)
       - 從四ツ橋站步行至橘子街：約 6–8 分鐘
     - **Google Maps 路線連結：**
-      - [日本橋飯店 -> 橘子街（步行）](https://www.google.com/maps/dir/日本橋/堀江橘通)
-      - [日本橋站 -> 四ツ橋站（地鐵）](https://www.google.com/maps/dir/日本橋駅/四ツ橋駅)
-      - 搜尋關鍵字：「堀江橘通」或「Orange Street Osaka」
+      - [ESLEAD HOTEL Osaka Shinsaibashi -> 橘子街（步行）](https://www.google.com/maps/dir/ESLEAD+HOTEL+Osaka+Shinsaibashi/堀江橘通)
+      - [長堀橋站 -> 四ツ橋站（地鐵）](https://www.google.com/maps/dir/長堀橋駅/四ツ橋駅)
+      - 搜尋關鍵字：「ESLEAD HOTEL Osaka Shinsaibashi」->「堀江橘通」或「Orange Street Osaka」
 
   - **移動 2：橘子街 -> 美國村（步行）**
     - **起點：** 橘子街（堀江橘通，ほりえたちばなどおり）
@@ -630,27 +642,27 @@
       - [難波站 -> 心齋橋站（御堂筋線）](https://www.google.com/maps/dir/なんば駅/心齋橋駅)
       - 搜尋關鍵字：「心齋橋パルコ」或「Shinsaibashi PARCO」
 
-  - **移動 6：心齋橋/難波 -> 日本橋飯店（取行李）**
+  - **移動 6：心齋橋/難波 -> ESLEAD HOTEL Osaka Shinsaibashi（取行李）**
     - **起點：** 心齋橋（心齋橋，しんさいばし）或難波（なんば）
-    - **終點：** Fuji Heights Hotel（日本橋，にっぽんばし）
-    - **選項 A（地鐵）：** 難波站（なんばえき / 千日前線，せんにちまえせん）-> 日本橋站（日本橋駅，にっぽんばしえき）
-      - 車程時間：約 1 分鐘（僅 1 站）
+    - **終點：** ESLEAD HOTEL Osaka Shinsaibashi（長堀橋站 6 號出口，步行約 2 分鐘）
+    - **選項 A（地鐵）：** 難波站（なんばえき / 堺筋線，さかいすじせん）-> 長堀橋站（長堀橋駅，ながほりばしえき）
+      - 車程時間：約 2 分鐘（僅 1 站）
       - 票價：成人 ￥190 (NT$ 38)
-    - **選項 B（步行）：** 從難波/道頓堀步行回日本橋飯店（約 12–18 分鐘）
+    - **選項 B（步行）：** 從難波/道頓堀步行回 ESLEAD HOTEL Osaka Shinsaibashi（約 10–15 分鐘）
     - **Google Maps 路線連結：**
-      - [難波站 -> 日本橋站（千日前線）](https://www.google.com/maps/dir/なんば駅/日本橋駅)
-      - 搜尋關鍵字：「なんば駅」->「日本橋駅」或「Namba Station」->「Nippombashi Station」
+      - [難波站 -> 長堀橋站（堺筋線）](https://www.google.com/maps/dir/なんば駅/長堀橋駅)
+      - 搜尋關鍵字：「なんば駅」->「長堀橋駅」或「Namba Station」->「Nagahoribashi Station」
 
-  - **移動 7：日本橋站 -> 南海難波站（步行轉乘）**
-    - **起點：** 日本橋站（日本橋駅，にっぽんばしえき）或 Fuji Heights Hotel
+  - **移動 7：長堀橋站 -> 南海難波站（步行轉乘）**
+    - **起點：** 長堀橋站（長堀橋駅，ながほりばしえき）或 ESLEAD HOTEL Osaka Shinsaibashi
     - **終點：** 南海難波站（南海なんば駅，なんかいなんばえき）
-    - **步行路線：** 從日本橋站步行至南海難波站（或從飯店直接步行至南海難波站）
-    - **步行時間：** 約 5–10 分鐘
+    - **步行路線：** 從長堀橋站步行至南海難波站（或從飯店直接步行至南海難波站）
+    - **步行時間：** 約 8–12 分鐘
     - **地標指引：** 按照「南海電鐵（なんかいでんてつ）」或「Nankai」指示牌前進
     - **注意事項：** 南海難波站與大阪地鐵難波站不同，需確認正確車站
     - **Google Maps 步行路線連結：**
-      - [日本橋站 -> 南海難波站（步行）](https://www.google.com/maps/dir/日本橋駅/南海なんば駅)
-      - 搜尋關鍵字：「日本橋駅」->「南海なんば駅」或「Nippombashi Station」->「Nankai Namba Station」
+      - [長堀橋站 -> 南海難波站（步行）](https://www.google.com/maps/dir/長堀橋駅/南海なんば駅)
+      - 搜尋關鍵字：「長堀橋駅」->「南海なんば駅」或「Nagahoribashi Station」->「Nankai Namba Station」
 
   - **移動 8：南海難波站 -> KIX 關西機場（南海 Rapi:t）**
     - **起點：** 南海難波站（南海なんば駅，なんかいなんばえき）
@@ -677,7 +689,7 @@
   - 13:45–15:15 心齋橋筋商店街 -> 戎橋筋 -> 道頓堀
   - 15:30–16:30 難波Walk（地下街採買）
   - 16:45–17:45 PARCO（補貨/逛特定專櫃）
-  - 18:00–19:00 晚餐（見下「晚餐推薦」；挑靠近「南海難波」或「日本橋」）
+  - 18:00–19:00 晚餐（見下「晚餐推薦」；挑靠近「南海難波」或「長堀橋」）
   - 19:00–19:30 取回行李（若中午寄放）
   - 20:00–20:30 「南海難波」搭 Rapi:t 前往 KIX（快線，對號座）
     - 票價參考：合計約 ￥1,450 (NT$ 292)/人（基本車資＋指定席加價）
@@ -714,13 +726,13 @@
     - 價位：豬肉包 2 入約 ￥420 (NT$ 85)、燒賣 6 入約 ￥420–￥600 (NT$ 85–121)
 
 - 動線提醒
-  - 日本橋（飯店）-> 橘子街：步行 20–25 分，或「日本橋->（千日前線）難波->（四つ橋線）四ツ橋」步行 6–8 分到橘子街
+  - 長堀橋（飯店）-> 橘子街：步行 18–22 分，或「長堀橋->（堺筋線）難波->（四つ橋線）四ツ橋」步行 6–8 分到橘子街
   - 美國村->心齋橋/道頓堀：皆步行 5–15 分圈
-  - 晚餐後->南海難波：步行 10–15 分；或搭千日前線 1 站「日本橋<->難波」取行李再走到南海難波
+  - 晚餐後->南海難波：步行 8–12 分；或搭堺筋線 1 站「長堀橋<->難波」取行李再走到南海難波
 
 
 ### 口袋版路線卡（USJ 當日帶著走）
-- 06:00 出門（Uber） -> 06:30–06:45 抵 USJ 入口排隊
+- 06:00 從 ESLEAD HOTEL Osaka Shinsaibashi 出門（Uber） -> 06:30–06:45 抵 USJ 入口排隊
 - 入園第一步：開 App 抽 SNW/HP 入場（若分流）
 - SNW：Mario Kart（≤80 分）／若 >80 分 -> 先 Yoshi，再回補 Mario Kart
 - 10:45–11:20 三根掃帚早午餐（避 11:30–13:30）
@@ -728,7 +740,7 @@
 - 14:30 Minion Park：Minion Mayhem 看候位插空
 - 16:30 傍晚輕鬆段：JAWS／拍照／伴手禮
 - 18:00 CityWalk 晚餐 -> 19:00 回程
-- 原則：不走單人通道、不買 Power‑Up Band；候位 >90 分就轉拍照或看表演，過 30–45 分再回補
+- 原則：不走單人通道、不買 Power-Up Band；候位 >90 分就轉拍照或看表演，過 30–45 分再回補
 
 
 ### 補充
