--- a/202512/熊家日本慶生行/BACKUP/行程-12-15.md
+++ b/202512/熊家日本慶生行/BACKUP/行程-12-15.md
@@ -1,12 +1,8 @@
 ### 熊家日本慶生行（2025/12/14–12/19）
 
-- 住宿：ESLEAD HOTEL Osaka Shinsaibashi（大阪心齋橋店）- 大阪心斎橋 〒542-0082 大阪府大阪市中央区島之内1丁目21-8（1 Chome-21-8 Shimbashi, Chuo Ward, Osaka, 542-0082, Japan）
-  - **最近車站：** 大阪地鐵堺筋線「長堀橋站」（長堀橋駅，ながほりばしえき / Sakaisuji Line）
-  - **出口：** 6號出口
-  - **步行時間：** 約2分鐘
-  - **Google Maps：** [ESLEAD HOTEL Osaka Shinsaibashi](https://www.google.com/maps/search/ESLEAD+HOTEL+Osaka+Shinsaibashi)
+- 住宿：Fuji Heights Hotel（Room 15, 1-10, Fujihights, Nipponbashi, Chuo Ward, Japan KIT H4 542-0073）
 - 旅伴：3 位大人＋1 位 12 歲小孩（等同成人票）
-- 規劃原則：以新住宿（ESLEAD HOTEL Osaka Shinsaibashi / 長堀橋站）為中心「輻射式」動線；當日單點深玩、步行半徑內串景再回飯店；以電車為主，Uber 僅備用
+- 規劃原則：以日本橋飯店為中心「輻射式」動線；當日單點深玩、步行半徑內串景再回飯店；以電車為主，Uber 僅備用
 - 匯率換算：1 日圓 ≈ NT$ 0.2013（參考 [Google Finance JPY/TWD](https://www.google.com/finance/quote/JPY-TWD)）
 
 參考來源：
@@ -20,8 +16,8 @@
 - ICOCA ([機場購票路線](https://wind.suzukihiro.tw/icoca/)) & 退票（[如何退票](https://lazyjapan.com/regions/kansai/transport/ic/)）
 
 
-### 行程總覽（ESLEAD HOTEL Osaka Shinsaibashi / 長堀橋站為中心的輻射動線）
-- 12/15（一）大阪市區：黑門市場->大阪城->梅田（阪神/阪急/LUCUA 1100/HEP FIVE）->鰻串晚餐
+### 行程總覽（日本橋飯店為中心的輻射動線）
+- 12/14（日）抵達日：KIX->難波（南海 Rapi:t/空港急行）->日本橋入住；辦 ICOCA；附近覓食
 
 ### 12/15（一）大阪市區：黑門市場 -> 大阪城 -> 梅田（阪神/阪急/LUCUA 1100/HEP FIVE）-> 鰻串晚餐
 - 交通總覽（2 日大阪周遊卡 + ICOCA）
@@ -31,19 +27,17 @@
 
 - **交通詳細指引**
 
-  - **移動 1：ESLEAD HOTEL Osaka Shinsaibashi -> 黑門市場（步行或地鐵）**
-    - **起點：** ESLEAD HOTEL Osaka Shinsaibashi（長堀橋站 6 號出口，步行約 2 分鐘）
+  - **移動 1：日本橋飯店 -> 黑門市場（步行）**
+    - **起點：** Fuji Heights Hotel（日本橋，にっぽんばし）
     - **終點：** 黑門市場（黒門市場，くろもんいちば）
-    - **選項 A（步行）：** 從飯店步行至黑門市場（約 15–18 分鐘）
-    - **選項 B（地鐵）：** 長堀橋站（長堀橋駅，ながほりばしえき / 堺筋線）-> 日本橋站（日本橋駅，にっぽんばしえき / 換乘千日前線）-> 日本橋站（千日前線）-> 黑門市場步行
-      - 車程時間：約 3–4 分鐘（含換乘）
-      - 票價：成人 ￥190 (NT$ 38)
+    - **步行路線：** 從飯店步行至黑門市場
+    - **步行時間：** 約 30 分鐘（09:30 出發 -> 10:00 抵達）
     - **地標指引：** 使用 Google Maps 導航至「黑門市場」
     - **Google Maps 步行路線連結：**
-      - [ESLEAD HOTEL Osaka Shinsaibashi -> 黑門市場（步行）](https://www.google.com/maps/dir/ESLEAD+HOTEL+Osaka+Shinsaibashi/黒門市場)
-      - 搜尋關鍵字：「ESLEAD HOTEL Osaka Shinsaibashi」->「黒門市場」或「Kuromon Ichiba」
+      - [日本橋飯店 -> 黑門市場（步行）](https://www.google.com/maps/dir/日本橋/黒門市場)
+      - 搜尋關鍵字：「黒門市場」或「Kuromon Ichiba」
 
-  - **移動 2：黑門市場 -> 長堀橋站 -> 谷町九丁目站（換乘）**
+  - **移動 2：黑門市場 -> 日本橋站 -> 谷町九丁目站（千日前線）**
     - **步行：** 從黑門市場（黒門市場，くろもんいちば）走回日本橋站（約 5–10 分鐘）
     - **起點：** 日本橋站（日本橋駅，にっぽんばしえき / 千日前線，せんにちまえせん）
       - 月台：通常為 1 號月台（往南巽方向，みなみたつみ）
@@ -96,20 +90,19 @@
       - [谷町四丁目站 -> 東梅田站（谷町線）](https://www.google.com/maps/dir/谷町四丁目駅/東梅田駅)
       - 搜尋關鍵字：「谷町四丁目駅」->「東梅田駅」或「Higashi-Umeda Station」
 
-  - **移動 6：東梅田站 -> 長堀橋站（回程）**
-    - **建議路線：** 東梅田站（東梅田駅，ひがしうめだえき / 谷町線，たにまちせん）-> 谷町九丁目站（換乘千日前線）-> 日本橋站（換乘堺筋線）-> 長堀橋站（長堀橋駅，ながほりばしえき）
+  - **移動 6：東梅田站 -> 日本橋站（回程）**
+    - **建議路線：** 東梅田站（東梅田駅，ひがしうめだえき / 谷町線，たにまちせん）-> 谷町九丁目站（換乘千日前線）-> 日本橋站（日本橋駅，にっぽんばしえき）
     - **換乘指示：**
-      1. 在谷町九丁目站下車，按照「千日前線（せんにちまえせん）」指示牌換乘
-      2. 搭乘千日前線（往南巽方向，みなみたつみ）至日本橋站
-      3. 在日本橋站換乘堺筋線（往天下茶屋方向，てんがちゃや）至長堀橋站
-    - **車程時間：** 約 12–15 分鐘（含換乘）
+      1. 在谷町九丁目站下車
+      2. 按照「千日前線（せんにちまえせん）」指示牌換乘
+      3. 搭乘千日前線（往南巽方向，みなみたつみ）至日本橋站
+    - **車程時間：** 約 10–12 分鐘（含換乘）
     - **票價：** 成人 ￥230 (NT$ 46)
-    - **備選路線：** 梅田站（梅田駅，うめだえき / 御堂筋線，みどうすじせん）-> 難波站（なんばえき / 換乘堺筋線）-> 長堀橋站
-      - 此路線較長，但換乘較簡單（如不熟悉換乘可選此路線）
-    - **出口指引：** 從長堀橋站 6 號出口出站，步行約 2 分鐘至 ESLEAD HOTEL Osaka Shinsaibashi
+    - **備選路線：** 梅田站（梅田駅，うめだえき / 御堂筋線，みどうすじせん）-> 難波站（なんばえき / 步行或千日前線）-> 日本橋站
+      - 此路線較長，但可避免換乘（如不熟悉換乘可選此路線）
     - **Google Maps 路線連結：**
-      - [東梅田站 -> 長堀橋站（回程）](https://www.google.com/maps/dir/東梅田駅/長堀橋駅)
-      - 搜尋關鍵字：「東梅田駅」->「長堀橋駅」或「Higashi-Umeda Station」->「Nagahoribashi Station」
+      - [東梅田站 -> 日本橋站（回程）](https://www.google.com/maps/dir/東梅田駅/日本橋駅)
+      - 搜尋關鍵字：「東梅田駅」->「日本橋駅」或「Higashi-Umeda Station」->「Nippombashi Station」
 
 - 時間軸（目標：20:00 前回到飯店）
   - 09:30 飯店出發步行 -> 10:00 抵黑門市場
@@ -136,9 +129,9 @@
   - 17:30–18:20 晚餐｜Unagi Kushiyaki Izumo（鰻串）
     - 預算（每人）：￥2,500–￥3,500 (NT$ 503–705)
     - 如為 LUCUA 內分店，動線更順；尖峰建議提早候位
-  - 18:25–19:00 回程 -> 長堀橋站
-    - 建議路線（其一）：東梅田（谷町線）-> 谷町九丁目（千日前線）-> 日本橋（堺筋線）-> 長堀橋
-    - 備選：梅田（御堂筋線）-> 難波（堺筋線）-> 長堀橋
+  - 18:25–19:00 回程 -> 日本橋
+    - 建議路線（其一）：東梅田（谷町線）-> 谷町九丁目（千日前線）-> 日本橋
+    - 備選：梅田（御堂筋線）-> 難波（步行或千日前線）-> 日本橋
   - 19:00–20:00 飯店整理/休息（達成「20:00 前回到飯店」目標）
 
 - 備註與微調守則
