--- a/202512/熊家日本慶生行/BACKUP/行程-12-16.md
+++ b/202512/熊家日本慶生行/BACKUP/行程-12-16.md
@@ -1,12 +1,8 @@
 ### 熊家日本慶生行（2025/12/14–12/19）
 
-- 住宿：ESLEAD HOTEL Osaka Shinsaibashi（大阪心齋橋店）- 大阪心斎橋 〒542-0082 大阪府大阪市中央区島之内1丁目21-8（1 Chome-21-8 Shimbashi, Chuo Ward, Osaka, 542-0082, Japan）
-  - **最近車站：** 大阪地鐵堺筋線「長堀橋站」（長堀橋駅，ながほりばしえき / Sakaisuji Line）
-  - **出口：** 6號出口
-  - **步行時間：** 約2分鐘
-  - **Google Maps：** [ESLEAD HOTEL Osaka Shinsaibashi](https://www.google.com/maps/search/ESLEAD+HOTEL+Osaka+Shinsaibashi)
+- 住宿：Fuji Heights Hotel（Room 15, 1-10, Fujihights, Nipponbashi, Chuo Ward, Japan KIT H4 542-0073）
 - 旅伴：3 位大人＋1 位 12 歲小孩（等同成人票）
-- 規劃原則：以新住宿（ESLEAD HOTEL Osaka Shinsaibashi / 長堀橋站）為中心「輻射式」動線；當日單點深玩、步行半徑內串景再回飯店；以電車為主，Uber 僅備用
+- 規劃原則：以日本橋飯店為中心「輻射式」動線；當日單點深玩、步行半徑內串景再回飯店；以電車為主，Uber 僅備用
 - 匯率換算：1 日圓 ≈ NT$ 0.2013（參考 [Google Finance JPY/TWD](https://www.google.com/finance/quote/JPY-TWD)）
 
 參考來源：
@@ -20,27 +16,27 @@
 - ICOCA ([機場購票路線](https://wind.suzukihiro.tw/icoca/)) & 退票（[如何退票](https://lazyjapan.com/regions/kansai/transport/ic/)）
 
 
-### 行程總覽（ESLEAD HOTEL Osaka Shinsaibashi / 長堀橋站為中心的輻射動線）
-- 12/16（二）大阪市區：木津市場->難波八阪神社->通天閣->HARUKAS 觀景台->四天王寺->PARCO->晚餐（やよい軒/天丼てんや）->難波Walk（20:00 前回飯店）
+### 行程總覽（日本橋飯店為中心的輻射動線）
+- 12/14（日）抵達日：KIX->難波（南海 Rapi:t/空港急行）->日本橋入住；辦 ICOCA；附近覓食
 
 ### 12/16（二）大阪市區：木津市場 -> 難波八阪神社 -> 通天閣 -> 阿倍野HARUKAS 觀景台 -> 四天王寺 -> PARCO -> やよい軒（難波）／天丼てんや（道頓堀/心齋橋） -> 難波Walk（20:00 前回飯店）
 - 交通（2 日大阪周遊卡 + ICOCA）
   - **三位大人：** 繼續使用 2 日大阪周遊卡（第 2 天），可無限次搭乘大阪 Metro、巴士等指定交通工具
-  - **12 歲小孩：** 使用 ICOCA，多以大阪 Metro＋JR 串接：長堀橋<->日本橋<->大國町/今宮戎/恵美須町/天王寺/心齋橋/難波（單段多為 ￥230–￥290）
+  - **12 歲小孩：** 使用 ICOCA，多以大阪 Metro＋JR 串接：日本橋<->大國町/今宮戎/恵美須町/天王寺/心齋橋/難波（單段多為 ￥230–￥290）
   - 動線盡量連貫，步行區段控制在 10–15 分內
 
 - **交通詳細指引**
 
-  - **移動 1：ESLEAD HOTEL Osaka Shinsaibashi -> 木津市場（步行或地鐵）**
-    - **起點：** ESLEAD HOTEL Osaka Shinsaibashi（長堀橋站 6 號出口，步行約 2 分鐘）
+  - **移動 1：日本橋飯店 -> 木津市場（步行或地鐵）**
+    - **起點：** Fuji Heights Hotel（日本橋，にっぽんばし）
     - **終點：** 木津市場（木津市場，きづいちば）
-    - **選項 A（步行）：** 從飯店步行至木津市場（約 12–15 分鐘）
-    - **選項 B（地鐵）：** 長堀橋站（長堀橋駅，ながほりばしえき / 堺筋線）-> 日本橋站（日本橋駅，にっぽんばしえき / 換乘千日前線）-> 大國町站（大國町駅，だいこくまちえき）或今宮戎站（今宮戎駅，いまみやえびすえき），再步行至木津市場
-      - 車程時間：約 4–5 分鐘（含換乘）
+    - **選項 A（步行）：** 從飯店步行至木津市場（約 10–12 分鐘）
+    - **選項 B（地鐵）：** 日本橋站（日本橋駅，にっぽんばしえき / 千日前線，せんにちまえせん）-> 大國町站（大國町駅，だいこくまちえき）或今宮戎站（今宮戎駅，いまみやえびすえき），再步行至木津市場
+      - 車程時間：約 2–3 分鐘
       - 票價：成人 ￥190 (NT$ 38)
     - **Google Maps 路線連結：**
-      - [ESLEAD HOTEL Osaka Shinsaibashi -> 木津市場（步行）](https://www.google.com/maps/dir/ESLEAD+HOTEL+Osaka+Shinsaibashi/木津市場)
-      - 搜尋關鍵字：「ESLEAD HOTEL Osaka Shinsaibashi」->「木津市場」或「Kizu Market」
+      - [日本橋飯店 -> 木津市場（步行）](https://www.google.com/maps/dir/日本橋/木津市場)
+      - 搜尋關鍵字：「木津市場」或「Kizu Market」
 
   - **移動 2：木津市場 -> 難波八阪神社（步行或地鐵）**
     - **起點：** 木津市場（木津市場，きづいちば）
@@ -99,18 +95,17 @@
       - [天王寺站 -> 心齋橋站（御堂筋線）](https://www.google.com/maps/dir/天王寺駅/心齋橋駅)
       - 搜尋關鍵字：「天王寺駅」->「心齋橋駅」或「Tennoji Station」->「Shinsaibashi Station」
 
-  - **移動 7：心齋橋 -> 難波Walk -> 長堀橋站（回程）**
+  - **移動 7：心齋橋 -> 難波Walk -> 日本橋站（回程）**
     - **起點：** 心齋橋（心齋橋，しんさいばし）
-    - **終點：** 長堀橋站（長堀橋駅，ながほりばしえき）
+    - **終點：** 日本橋站（日本橋駅，にっぽんばしえき）
     - **步行：** 從心齋橋步行至難波Walk（なんばウォーク）、道頓堀（道頓堀，どうとんぼり）（約 5–10 分鐘）
-    - **回程選項 A（地鐵）：** 難波站（なんばえき / 堺筋線，さかいすじせん）-> 長堀橋站
-      - 車程時間：約 2 分鐘（僅 1 站）
+    - **回程選項 A（地鐵）：** 難波站（なんばえき / 千日前線，せんにちまえせん）-> 日本橋站
+      - 車程時間：約 1 分鐘（僅 1 站）
       - 票價：成人 ￥190 (NT$ 38)
-    - **回程選項 B（步行）：** 從難波/道頓堀步行回 ESLEAD HOTEL Osaka Shinsaibashi（約 10–15 分鐘）
-    - **出口指引：** 從長堀橋站 6 號出口出站，步行約 2 分鐘至飯店
+    - **回程選項 B（步行）：** 從難波/道頓堀步行回日本橋飯店（約 12–18 分鐘）
     - **Google Maps 路線連結：**
-      - [心齋橋 -> 難波Walk -> 長堀橋站（回程）](https://www.google.com/maps/dir/心齋橋/長堀橋駅)
-      - 搜尋關鍵字：「心齋橋」->「難波」->「長堀橋駅」或「Shinsaibashi」->「Namba」->「Nagahoribashi Station」
+      - [心齋橋 -> 難波Walk -> 日本橋站（回程）](https://www.google.com/maps/dir/心齋橋/日本橋駅)
+      - 搜尋關鍵字：「心齋橋」->「難波」->「日本橋駅」或「Shinsaibashi」->「Namba」->「Nippombashi Station」
 
 - 時間軸（估）
   - 07:30 出門 -> 07:50 抵「木津市場」周邊（步行 10–12 分或搭至大國町/今宮戎再步行）
@@ -124,7 +119,7 @@
   - 15:45–16:45 心齋橋 PARCO（從天王寺搭御堂筋線至心齋橋）
   - 17:00–17:50 難波Walk 地下街（步行移動至道頓堀/難波）
   - 18:00–19:00 晚餐：やよい軒（難波）｜備案：天丼てんや（道頓堀/心齋橋）（見下「晚餐推薦」）
-  - 19:00–19:30 步行或地鐵回到長堀橋站
+  - 19:00–19:30 步行或 1 站地鐵回到日本橋
   - 20:00 前 抵飯店
 
 - 早餐推薦（木津市場）
@@ -165,7 +160,7 @@
   - 木津市場 -> 難波八阪神社：步行約 15–18 分，或短程地鐵至難波再步行
   - 新世界（通天閣）<->四天王寺<->天王寺：皆在 1～2 站地鐵/1～1.5km 步行圈
   - HARUKAS -> 心齋橋（PARCO）：御堂筋線直達（約 9–12 分）
-  - 晚餐後到飯店：道頓堀/難波 -> 長堀橋步行約 10–15 分；搭堺筋線 1 站更省力
+  - 晚餐後到飯店：道頓堀/難波 -> 日本橋步行約 12–18 分；搭千日前線 1 站更省力
   - 時間守門：17:50 離開難波Walk、18:00 入座晚餐、19:30 動身回飯店 -> 輕鬆在 20:00 前到
 
 
