--- a/202512/熊家日本慶生行/行程-12-18.md
+++ b/202512/熊家日本慶生行/行程-12-18.md
@@ -1,8 +1,12 @@
 ### 熊家日本慶生行（2025/12/14–12/19）
 
-- 住宿：Fuji Heights Hotel（Room 15, 1-10, Fujihights, Nipponbashi, Chuo Ward, Japan KIT H4 542-0073）
+- 住宿：ESLEAD HOTEL Osaka Shinsaibashi（大阪心齋橋店）- 大阪心斎橋 〒542-0082 大阪府大阪市中央区島之内1丁目21-8（1 Chome-21-8 Shimbashi, Chuo Ward, Osaka, 542-0082, Japan）
+  - **最近車站：** 大阪地鐵堺筋線「長堀橋站」（長堀橋駅，ながほりばしえき / Sakaisuji Line）
+  - **出口：** 6號出口
+  - **步行時間：** 約2分鐘
+  - **Google Maps：** [ESLEAD HOTEL Osaka Shinsaibashi](https://www.google.com/maps/search/ESLEAD+HOTEL+Osaka+Shinsaibashi)
 - 旅伴：3 位大人＋1 位 12 歲小孩（等同成人票）
-- 規劃原則：以日本橋飯店為中心「輻射式」動線；當日單點深玩、步行半徑內串景再回飯店；以電車為主，Uber 僅備用
+- 規劃原則：以新住宿（ESLEAD HOTEL Osaka Shinsaibashi / 長堀橋站）為中心「輻射式」動線；當日單點深玩、步行半徑內串景再回飯店；以電車為主，Uber 僅備用
 - 匯率換算：1 日圓 ≈ NT$ 0.2013（參考 [Google Finance JPY/TWD](https://www.google.com/finance/quote/JPY-TWD)）
 
 參考來源：
@@ -16,94 +20,112 @@
 - ICOCA ([機場購票路線](https://wind.suzukihiro.tw/icoca/)) & 退票（[如何退票](https://lazyjapan.com/regions/kansai/transport/ic/)）
 
 
-### 行程總覽（日本橋飯店為中心的輻射動線）
-- 12/14（日）抵達日：KIX->難波（南海 Rapi:t/空港急行）->日本橋入住；辦 ICOCA；附近覓食
+### 行程總覽（ESLEAD HOTEL Osaka Shinsaibashi / 長堀橋站為中心的輻射動線）
+- 12/18（四）京都一日：和服租借・伏見稻荷・清水寺/二年坂/三年坂・祇園/花見小路/鴨川/八坂神社
 
 ### 12/18（四）京都：和服租借 -> 伏見稻荷 -> 清水寺/二年坂/三年坂 -> 花見小路/鴨川/八坂神社 -> 祇園（20:00 前回飯店）
 - 交通（1 日京阪觀光 + ICOCA）
   - **三位大人：** 使用 1 日京阪觀光（每人 NT$ 330），可無限次搭乘京阪電鐵指定區間
-  - **12 歲小孩：** 使用 ICOCA，日本橋 ->（千日前線）難波 ->（御堂筋線）淀屋橋 ->（京阪）祇園四条／清水五条
-  - 市內移動以京阪/地下鐵＋步行；18:30 左右從祇園四条 ->（京阪/地下鐵）-> 日本橋，19:50 前抵達
+  - **12 歲小孩：** 使用 ICOCA，長堀橋 ->（堺筋線）日本橋 ->（千日前線）難波 ->（御堂筋線）淀屋橋 ->（京阪）祇園四条／清水五条
+  - 市內移動以京阪/地下鐵＋步行；18:30 左右從祇園四条 ->（京阪/地下鐵）-> 長堀橋，19:50 前抵達
 
-**交通詳細指引**
+- **交通詳細指引**
 
-**移動 1：日本橋站 -> 難波站（千日前線）**
+  - **移動 1：長堀橋站 -> 難波站（堺筋線）**
+    - **起點：** 長堀橋站（長堀橋駅，ながほりばしえき / 堺筋線，さかいすじせん）
+      - 月台：通常為往天下茶屋方向（てんがちゃや）
+      - 方向：往天下茶屋方向（終點站：天下茶屋駅，てんがちゃやえき）
+    - **終點：** 難波站（なんばえき / 堺筋線）
+      - 車程時間：約 2 分鐘（僅 1 站）
+      - 票價：成人 ￥190 (NT$ 38)
+    - **換乘指示：** 在難波站換乘御堂筋線（みどうすじせん）前往淀屋橋
+    - **Google Maps 路線連結：**
+      - [長堀橋站 -> 難波站（堺筋線）](https://www.google.com/maps/dir/長堀橋駅/なんば駅)
+      - 搜尋關鍵字：「長堀橋駅」->「なんば駅」或「Nagahoribashi Station」->「Namba Station」
 
-**起點：** 日本橋站（日本橋駅，にっぽんばしえき / 千日前線，せんにちまえせん）。月台：通常為 1 號月台（往南巽方向，みなみたつみ）。方向：往南巽方向（終點站：南巽駅，みなみたつみえき）
+  - **移動 2：難波站 -> 淀屋橋站（御堂筋線，換乘）**
+    - **換乘指示：**
+      1. 從千日前線月台下車
+      2. 按照站內「御堂筋線（みどうすじせん）」指示牌前進（可能需要上樓或下樓）
+      3. 到達御堂筋線月台
+    - **起點：** 難波站（なんばえき / 御堂筋線，みどうすじせん）
+      - 月台：通常為 1 號月台（往千里中央方向，せんりちゅうおう）
+      - 方向：往千里中央方向（往北）
+    - **終點：** 淀屋橋站（淀屋橋駅，よどやばしえき）
+      - 車程時間：約 5–6 分鐘（直達）
+      - 票價：成人 ￥230 (NT$ 46)
+    - **Google Maps 路線連結：**
+      - [難波站 -> 淀屋橋站（御堂筋線）](https://www.google.com/maps/dir/なんば駅/淀屋橋駅)
+      - 搜尋關鍵字：「なんば駅」->「淀屋橋駅」或「Namba Station」->「Yodoyabashi Station」
 
-**終點：** 難波站（なんばえき）。車程時間：約 1 分鐘（僅 1 站）。票價：成人 ￥190 (NT$ 38)
+  - **移動 3：淀屋橋站 -> 京阪淀屋橋站（步行轉乘）**
+    - **起點：** 淀屋橋站（淀屋橋駅，よどやばしえき / 大阪地鐵）
+    - **終點：** 京阪淀屋橋站（京阪淀屋橋駅，けいはんよどやばしえき / 京阪本線，けいはんほんせん）
+    - **步行路線：** 從大阪地鐵淀屋橋站步行至京阪電鐵淀屋橋站（同一建築內，有連通道）
+    - **步行時間：** 約 2–3 分鐘
+    - **地標指引：** 按照「京阪電鐵（けいはんでんてつ）」或「Keihan」指示牌前進
+    - **Google Maps 步行路線連結：**
+      - [淀屋橋站 -> 京阪淀屋橋站（步行）](https://www.google.com/maps/dir/淀屋橋駅/京阪淀屋橋駅)
+      - 搜尋關鍵字：「淀屋橋駅」->「京阪淀屋橋駅」或「Yodoyabashi Station」->「Keihan Yodoyabashi Station」
 
-**Google Maps 路線連結：** [日本橋站 -> 難波站（千日前線）](https://www.google.com/maps/dir/日本橋駅/なんば駅)。搜尋關鍵字：「日本橋駅」->「なんば駅」或「Nippombashi Station」->「Namba Station」
+  - **移動 4：京阪淀屋橋站 -> 祇園四条站或清水五条站（京阪本線）**
+    - **起點：** 京阪淀屋橋站（京阪淀屋橋駅，けいはんよどやばしえき / 京阪本線，けいはんほんせん）
+      - 月台：通常為 1 號月台（往出町柳方向，でまちやなぎ）
+      - 方向：往出町柳方向（往京都方向）
+    - **終點選項：**
+      - **選項 A：** 祇園四条站（祇園四条駅，ぎおんしじょうえき / 建議，離和服店較近）
+        - 車程時間：約 50–55 分鐘
+        - 票價：成人 ￥410 (NT$ 83)
+      - **選項 B：** 清水五条站（清水五条駅，きよみずごじょうえき / 如和服店在清水寺附近）
+        - 車程時間：約 48–52 分鐘
+        - 票價：成人 ￥410 (NT$ 83)
+    - **注意事項：**
+      - 京阪本線有普通、準急、急行等不同車種，建議搭乘急行列車較快
+      - 部分列車可能需要在某些站換乘，請注意車廂內廣播
+    - **Google Maps 路線連結：**
+      - [京阪淀屋橋站 -> 祇園四条站（京阪本線）](https://www.google.com/maps/dir/京阪淀屋橋駅/祇園四条駅)
+      - [京阪淀屋橋站 -> 清水五条站（京阪本線）](https://www.google.com/maps/dir/京阪淀屋橋駅/清水五条駅)
+      - 搜尋關鍵字：「京阪淀屋橋駅」->「祇園四条駅」或「Keihan Yodoyabashi Station」->「Gion-Shijo Station」
 
-**移動 2：難波站 -> 淀屋橋站（御堂筋線，換乘）**
+  - **移動 5：祇園四条站 -> 伏見稻荷大社（京阪本線）**
+    - **起點：** 祇園四条站（祇園四条駅，ぎおんしじょうえき / 京阪本線，けいはんほんせん）
+      - 月台：通常為 2 號月台（往淀屋橋方向，よどやばし / 但需確認是否為往伏見稻荷方向的列車）
+      - 方向：往淀屋橋方向（往南）
+    - **終點：** 伏見稻荷站（伏見稲荷駅，ふしみいなりえき）
+      - 車程時間：約 8–10 分鐘
+      - 票價：成人 ￥210 (NT$ 42)
+    - **出口指引：** 從伏見稻荷站出站後，步行約 3–5 分鐘至伏見稻荷大社（伏見稲荷大社，ふしみいなりたいしゃ）
+    - **Google Maps 路線連結：**
+      - [祇園四条站 -> 伏見稻荷站（京阪本線）](https://www.google.com/maps/dir/祇園四条駅/伏見稲荷駅)
+      - 搜尋關鍵字：「祇園四条駅」->「伏見稲荷駅」或「Gion-Shijo Station」->「Fushimi-Inari Station」
 
-**換乘指示：** 從千日前線月台下車，按照站內「御堂筋線（みどうすじせん）」指示牌前進（可能需要上樓或下樓），到達御堂筋線月台
+  - **移動 6：伏見稻荷站 -> 清水五条站或祇園四条站（京阪本線，回程）**
+    - **起點：** 伏見稻荷站（伏見稲荷駅，ふしみいなりえき / 京阪本線，けいはんほんせん）
+      - 月台：通常為 1 號月台（往出町柳方向，でまちやなぎ）
+      - 方向：往出町柳方向（往北）
+    - **終點：** 清水五条站（清水五条駅，きよみずごじょうえき）或祇園四条站（祇園四条駅，ぎおんしじょうえき）（依行程安排）
+      - 車程時間：約 8–12 分鐘
+      - 票價：成人 ￥210–￥280 (NT$ 42–56)
+    - **Google Maps 路線連結：**
+      - [伏見稻荷站 -> 祇園四条站（京阪本線）](https://www.google.com/maps/dir/伏見稲荷駅/祇園四条駅)
+      - 搜尋關鍵字：「伏見稲荷駅」->「祇園四条駅」或「Fushimi-Inari Station」->「Gion-Shijo Station」
 
-**起點：** 難波站（なんばえき / 御堂筋線，みどうすじせん）。月台：通常為 1 號月台（往千里中央方向，せんりちゅうおう）。方向：往千里中央方向（往北）
-
-**終點：** 淀屋橋站（淀屋橋駅，よどやばしえき）。車程時間：約 5–6 分鐘（直達）。票價：成人 ￥230 (NT$ 46)
-
-**Google Maps 路線連結：** [難波站 -> 淀屋橋站（御堂筋線）](https://www.google.com/maps/dir/なんば駅/淀屋橋駅)。搜尋關鍵字：「なんば駅」->「淀屋橋駅」或「Namba Station」->「Yodoyabashi Station」
-
-**移動 3：淀屋橋站 -> 京阪淀屋橋站（步行轉乘）**
-
-**起點：** 淀屋橋站（淀屋橋駅，よどやばしえき / 大阪地鐵）
-
-**終點：** 京阪淀屋橋站（京阪淀屋橋駅，けいはんよどやばしえき / 京阪本線，けいはんほんせん）
-
-**步行路線：** 從大阪地鐵淀屋橋站步行至京阪電鐵淀屋橋站（同一建築內，有連通道）
-
-**步行時間：** 約 2–3 分鐘
-
-**地標指引：** 按照「京阪電鐵（けいはんでんてつ）」或「Keihan」指示牌前進
-
-**Google Maps 步行路線連結：** [淀屋橋站 -> 京阪淀屋橋站（步行）](https://www.google.com/maps/dir/淀屋橋駅/京阪淀屋橋駅)。搜尋關鍵字：「淀屋橋駅」->「京阪淀屋橋駅」或「Yodoyabashi Station」->「Keihan Yodoyabashi Station」
-
-**移動 4：京阪淀屋橋站 -> 祇園四条站或清水五条站（京阪本線）**
-
-**起點：** 京阪淀屋橋站（京阪淀屋橋駅，けいはんよどやばしえき / 京阪本線，けいはんほんせん）。月台：通常為 1 號月台（往出町柳方向，でまちやなぎ）。方向：往出町柳方向（往京都方向）
-
-**終點選項：**
-
-**選項 A：** 祇園四条站（祇園四条駅，ぎおんしじょうえき / 建議，離和服店較近）。車程時間：約 50–55 分鐘。票價：成人 ￥410 (NT$ 83)
-
-**選項 B：** 清水五条站（清水五条駅，きよみずごじょうえき / 如和服店在清水寺附近）。車程時間：約 48–52 分鐘。票價：成人 ￥410 (NT$ 83)
-
-**注意事項：** 京阪本線有普通、準急、急行等不同車種，建議搭乘急行列車較快。部分列車可能需要在某些站換乘，請注意車廂內廣播
-
-**Google Maps 路線連結：** [京阪淀屋橋站 -> 祇園四条站（京阪本線）](https://www.google.com/maps/dir/京阪淀屋橋駅/祇園四条駅)、[京阪淀屋橋站 -> 清水五条站（京阪本線）](https://www.google.com/maps/dir/京阪淀屋橋駅/清水五条駅)。搜尋關鍵字：「京阪淀屋橋駅」->「祇園四条駅」或「Keihan Yodoyabashi Station」->「Gion-Shijo Station」
-
-**移動 5：祇園四条站 -> 伏見稻荷大社（京阪本線）**
-
-**起點：** 祇園四条站（祇園四条駅，ぎおんしじょうえき / 京阪本線，けいはんほんせん）。月台：通常為 2 號月台（往淀屋橋方向，よどやばし / 但需確認是否為往伏見稻荷方向的列車）。方向：往淀屋橋方向（往南）
-
-**終點：** 伏見稻荷站（伏見稲荷駅，ふしみいなりえき）。車程時間：約 8–10 分鐘。票價：成人 ￥210 (NT$ 42)
-
-**出口指引：** 從伏見稻荷站出站後，步行約 3–5 分鐘至伏見稻荷大社（伏見稲荷大社，ふしみいなりたいしゃ）
-
-**Google Maps 路線連結：** [祇園四条站 -> 伏見稻荷站（京阪本線）](https://www.google.com/maps/dir/祇園四条駅/伏見稲荷駅)。搜尋關鍵字：「祇園四条駅」->「伏見稲荷駅」或「Gion-Shijo Station」->「Fushimi-Inari Station」
-
-**移動 6：伏見稻荷站 -> 清水五条站或祇園四条站（京阪本線，回程）**
-
-**起點：** 伏見稻荷站（伏見稲荷駅，ふしみいなりえき / 京阪本線，けいはんほんせん）。月台：通常為 1 號月台（往出町柳方向，でまちやなぎ）。方向：往出町柳方向（往北）
-
-**終點：** 清水五条站（清水五条駅，きよみずごじょうえき）或祇園四条站（祇園四条駅，ぎおんしじょうえき）（依行程安排）。車程時間：約 8–12 分鐘。票價：成人 ￥210–￥280 (NT$ 42–56)
-
-**Google Maps 路線連結：** [伏見稻荷站 -> 祇園四条站（京阪本線）](https://www.google.com/maps/dir/伏見稲荷駅/祇園四条駅)。搜尋關鍵字：「伏見稲荷駅」->「祇園四条駅」或「Fushimi-Inari Station」->「Gion-Shijo Station」
-
-**移動 7：祇園四条站 -> 日本橋站（回程）**
-
-**路線：** 祇園四条站（祇園四条駅，ぎおんしじょうえき / 京阪本線，けいはんほんせん）-> 淀屋橋站（淀屋橋駅，よどやばしえき / 步行轉乘）-> 淀屋橋站（御堂筋線，みどうすじせん）-> 難波站（なんばえき / 換乘千日前線，せんにちまえせん）-> 日本橋站（日本橋駅，にっぽんばしえき）
-
-**詳細步驟：** 從祇園四条站搭乘京阪本線（往淀屋橋方向，よどやばし）至淀屋橋站（約 50–55 分鐘），在淀屋橋站步行轉乘至大阪地鐵淀屋橋站（約 2–3 分鐘），搭乘御堂筋線（往難波方向，なんば）至難波站（約 5–6 分鐘），在難波站換乘千日前線（往南巽方向，みなみたつみ）至日本橋站（約 1 分鐘）
-
-**總車程時間：** 約 60–65 分鐘（含換乘）
-
-**總票價：** 成人約 ￥840 (NT$ 169)（京阪 ￥410 + 地鐵 ￥430）
-
-**注意事項：** 建議 18:30 前開始回程，以確保 19:50 前抵達日本橋。跨府轉乘較複雜，建議預留充足時間
-
-**Google Maps 路線連結：** [祇園四条站 -> 日本橋站（回程完整路線）](https://www.google.com/maps/dir/祇園四条駅/日本橋駅)。搜尋關鍵字：「祇園四条駅」->「日本橋駅」或「Gion-Shijo Station」->「Nippombashi Station」
+  - **移動 7：祇園四条站 -> 長堀橋站（回程）**
+    - **路線：** 祇園四条站（祇園四条駅，ぎおんしじょうえき / 京阪本線，けいはんほんせん）-> 淀屋橋站（淀屋橋駅，よどやばしえき / 步行轉乘）-> 淀屋橋站（御堂筋線，みどうすじせん）-> 難波站（なんばえき / 換乘堺筋線，さかいすじせん）-> 長堀橋站（長堀橋駅，ながほりばしえき）
+    - **詳細步驟：**
+      1. 從祇園四条站搭乘京阪本線（往淀屋橋方向，よどやばし）至淀屋橋站（約 50–55 分鐘）
+      2. 在淀屋橋站步行轉乘至大阪地鐵淀屋橋站（約 2–3 分鐘）
+      3. 搭乘御堂筋線（往難波方向，なんば）至難波站（約 5–6 分鐘）
+      4. 在難波站換乘堺筋線（往天下茶屋方向，てんがちゃや）至長堀橋站（約 2 分鐘）
+    - **總車程時間：** 約 60–65 分鐘（含換乘）
+    - **總票價：** 成人約 ￥840 (NT$ 169)（京阪 ￥410 + 地鐵 ￥430）
+    - **出口指引：** 從長堀橋站 6 號出口出站，步行約 2 分鐘至 ESLEAD HOTEL Osaka Shinsaibashi
+    - **注意事項：**
+      - 建議 18:30 前開始回程，以確保 19:50 前抵達長堀橋
+      - 跨府轉乘較複雜，建議預留充足時間
+    - **Google Maps 路線連結：**
+      - [祇園四条站 -> 長堀橋站（回程完整路線）](https://www.google.com/maps/dir/祇園四条駅/長堀橋駅)
+      - 搜尋關鍵字：「祇園四条駅」->「長堀橋駅」或「Gion-Shijo Station」->「Nagahoribashi Station」
 
 - 節奏規劃
   - 07:30 出門 -> 08:40 抵京都（祇園四条/清水五条）
@@ -119,7 +141,7 @@
   - 16:50–17:30 甜點（見下「甜點/下午茶」）
   - 17:30–17:50 歸還和服（多數店家 18:00 截止，延長需加價）
   - 17:50–18:20 晚餐（見下「晚餐名單」；快餐型避免壓到返程）
-  - 18:30–19:50 返回日本橋（達成 20:00 前回飯店）
+  - 18:30–19:50 返回長堀橋站（達成 20:00 前回飯店）
 
 - 早餐名單（2 選 1）
   - INODA COFFEE（京都站 Porta/本店就近擇店）
